--- a/_pages/프로그래밍/DS, AI/al01.md
+++ b/_pages/프로그래밍/DS, AI/al01.md
@@ -6,17 +6,15 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 ---
 
-# **알고리즘(Algorithms)
+# **알고리즘(Algorithms)**
 ---
-## **용어정리**
+## **알고리즘 관련 용어정리**
 
 |용어|설명|
 |:---:|:---:|
-|문제(Problem)|컴퓨터 프로그램은 개별적인 모듈로 구성되며, 각 모듈은 컴퓨터가 이해할 수 있는 방식으로 특정한 작업(예: 정렬)을 해결함
-이 책에서 다루는 내용은 전체 프로그램의 설계가 아니라, 특정한 작업을 수행하는 개별 모듈의 설계이다. 이러한 특정한 작업을 ‘문제(Problem)’라고 한다|
+|문제(Problem)|컴퓨터 프로그램은 개별적인 모듈로 구성되며, 각 모듈은 컴퓨터가 이해할 수 있는 방식으로 특정한 작업을 해결함, 이 책에서 다루는 내용은 전체 프로그램의 설계가 아니라, 특정한 작업을 수행하는 개별 모듈의 설계이다. 이러한 특정한 작업을 ‘문제(Problem)’라고 한다|
 |매개변수(Parameters)|문제 포함된 특정한 값이 정해지지 않은 변수|
-|인스턴스(Instance)|문제는 매개변수를 포함하므로, 각각의 매개변수 값이 할당될 때마다 서로 다른 문제 인스턴스(instance)가 생성된다.
-➢ 특정한 매개변수 값이 할당된 문제를 "문제의 인스턴스(Instance of a Problem)|
+|인스턴스(Instance)|문제는 매개변수를 포함하므로, 각각의 매개변수 값이 할당될 때마다 서로 다른 문제 인스턴스(instance)가 생성된다. 특정한 매개변수 값이 할당된 문제를 "문제의 인스턴스(Instance of a Problem)|
 |해결방법(Solution)|해당 인스턴스에서의 해결 방법(Solution)은 주어진 질문에 대한 답|
 |알고리즘(Algorithm)|컴퓨터가 문제의 모든 인스턴스를 해결할 수 있도록 하기위해 각 인스턴스에 대한 해결 방법을 명확한 단계별 절차(step-by-step procedure)로 |
 |의사코드(Pseudocode)|알고리즘을 사람이 이해하기 쉽게 표현한 것으로, 특정 프로그래밍 언어의 문법을 따르지 않고 자연어와 유사한 형식으로 작성된 코드|
@@ -25,15 +23,14 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 <br>
 
 ## **예시**
-예제 1.
-리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라. 답은 정렬된 순서의 숫자들이다.
-예제 1에서는 두 개의 매개변수, 즉 **리스트 S**와 **리스트의 크기 n**이 존재한다.
-리스트란 특정한 순서로 배열된 항목들의 모음을 의미한다. 예를 들어, S=[10,7,11,5,13,8]
-이 리스트는 6개의 숫자로 구성되어 있으며, 첫 번째 숫자는 10, 두 번째 숫자는 7과 같이 나열된다.
+**[ 예제 1 ]**
+> 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
+비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
 
+답(Solution): 정렬된 순서의 숫자
+매개변수: 리스트 S, 리스트의 크기 n
 인스턴스: S=[10,7,11,5,13,8], n=6
 해결 방법(정렬된 리스트): 5,7,8,10,11,13
-이 예시에서, 우리는 리스트를 "오름차순(increasing order)" 대신 "비내림차순(nondecreasing order)"으로 정렬한다고 표현하는데, 이는 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서이다.
 
 ➢ 예제 3의 문제 인스턴스를 해결하기 위해, 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있다.
 ➢ 그러나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움.
