--- a/_pages/프로그래밍/DS, AI/al01.md
+++ b/_pages/프로그래밍/DS, AI/al01.md
@@ -8,7 +8,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 # **알고리즘(Algorithms)**
 ---
-## **알고리즘 관련 용어정리**
+## **💡 알고리즘 관련 용어정리**
 
 |용어|설명|
 |:---:|:---:|
@@ -22,7 +22,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 <br>
 <br>
 
-## **예시**
+## **💡 예시**
 **[ 예제 1 ]**
 > 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
@@ -45,17 +45,17 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 <br>
 
 **서술적 알고리즘(Descriptive Algorithm)의 문제점**
-복잡한 알고리즘을 이러한 방식으로 작성하는 것은 어렵다.
-작성하더라도 사람이 이를 이해하는 것이 쉽지 않다.
-영어 문장으로 표현된 알고리즘을 컴퓨터 언어로 변환하는 방법이 명확하지 않다.
-즉, 자연어 기반의 알고리즘 설명은 비효율적일 수 있으며, 이를 보다 명확하고 체계적으로 정리할 필요가 있다.
+• 복잡한 알고리즘을 이러한 방식으로 작성하는 것은 어렵고, 작성하더라도 사람이 이를 이해하는 것이 쉽지 않다
+• 영어 문장으로 표현된 알고리즘을 컴퓨터 언어로 변환하는 방법이 명확하지 않다
+• 즉, 자연어 기반의 알고리즘 설명은 비효율적일 수 있으며, 이를 보다 명확하고 체계적으로 정리할 필요가 있다
 
 <br>
 <br>
 
-## ** 의사코드(Pseudocode)와 C/C++ 코드의 차이점 (배열 관련)**
+## **💡 의사코드(Pseudocode)와 C/C++ 코드의 차이점 (배열 관련)**
 • 2차원 가변 길이 배열을 함수의 매개변수로 허용
 • 지역(local)에서 가변 길이 배열을 선언 가능
+• 함수명 앞에 데이터 타입을 명시하지 않아도 됨
 • C++ 코드보다 수학적 표현과 영어와 유사한 표현을 더 많이 사용 가능
 > 예: `exchange x and y;` (의사코드) → `temp = x; x = y; y = temp;` (C++ 코드) 
 
@@ -85,7 +85,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 | ( x \leq y ) | `x <= y` |
 | ( x \geq y ) | `x >= y` |
 
-• 함수명 앞에 데이터 타입을 명시하지 않아도 됨
+
 
 
 
@@ -97,7 +97,11 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 # **효율적인 알고리즘 분석의 중요성**
 ---
-## **순차 탐색(Sequential Search) vs. 이진 탐색(Binary Search)**  
+비효율적인 알고리즘 분석을 통해 효율적인 알고리즘 분석의 중요성을 알아보도록 한다!
+
+<br>
+
+## **💡 순차 탐색(Sequential Search) vs 이진 탐색(Binary Search)**  
 **[ 이진 탐색(Binary Search) ]**
 
 > **while 루프에서 두 번 비교하는가, 한 번 비교하는가?**  
@@ -114,7 +118,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 <br>
 
-**순차 탐색(Sequential Search) vs. 이진 탐색(Binary Search) 비교**  
+**[ 순차 탐색(Sequential Search) vs. 이진 탐색(Binary Search) 비교 ]**  
 
 |배열 크기|순차탐색 비교 횟수|이진탐색 비교 횟수|
 |:---:|:---:|:---:|
@@ -123,18 +127,20 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 |**1,048,576**|1,048,576|21|
 |**4,294,967,296**|4,294,967,296|33|
 
-> **순차 탐색(Sequential Search)**: 입력 크기 n이 증가할수록 비교 횟수가 **선형적(O(n))**으로 증가
-4,294,967,296개의 요소가 있을 때, 4,294,967,296번 비교
+> **순차 탐색(Sequential Search)**
+• 입력 크기 n이 증가할수록 비교 횟수가 **선형적(O(n))**으로 증가
+• 4,294,967,296개의 요소가 있을 때, 4,294,967,296번 비교
 
-> **이진 탐색(Binary Search)**: 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임
-4,294,967,296개의 요소가 있을 때, 단 33번의 비교
+> **이진 탐색(Binary Search)**
+• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임
+• 4,294,967,296개의 요소가 있을 때, 단 33번의 비교
 
 
 
 <br>
 <br>
 
-## **피보나치 수열(The Fibonacci Sequence)**
+## **💡 피보나치 수열(The Fibonacci Sequence)**
 **피보나치 수열의 정의**
 
 ```
@@ -179,7 +185,9 @@ f5 = f4 + f3 = 3 + 2 = 5
        fib(0)  fib(1)  fib(1)  fib(2)
                             /     \
                        fib(0)  fib(1)
+```
 
+```
 T(n) > 2 * T(n-2)
      > 2 * 2 * T(n-4)
      > 2 * 2 * 2 * T(n-6)
