--- a/_pages/프로그래밍/DS, AI/al01.md
+++ b/_pages/프로그래밍/DS, AI/al01.md
@@ -1,14 +1,15 @@
 ---
-title: "[알고리즘] 효율성 분석과 차수"
+title: "[알고리즘] Ch1 - 1. 알고리즘"
 tags:
 date: "2025-03-20"
 thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 ---
 
-# **알고리즘(Algorithms)**
+# **알고리즘 관련 용어정리**
 ---
-## **💡 알고리즘 관련 용어정리**
+
+## **용어정리**
 
 |용어|설명|
 |:---:|:---:|
@@ -22,7 +23,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 <br>
 <br>
 
-## **💡 예시**
+## **예시**
 **[ 예제 1 ]**
 > 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
@@ -32,8 +33,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 인스턴스: S=[10,7,11,5,13,8], n=6
 해결 방법(정렬된 리스트): 5,7,8,10,11,13
 
-➢ 예제 3의 문제 인스턴스를 해결하기 위해, 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있다.
-➢ 그러나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움.
+➢ 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
 
 <br>
 예제 2.
@@ -51,8 +51,9 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 <br>
 <br>
+<br>
 
-## **💡 의사코드(Pseudocode)와 C/C++ 코드의 차이점 (배열 관련)**
+## **의사코드(Pseudocode)와 C/C++ 코드의 차이점 (배열 관련)**
 • 2차원 가변 길이 배열을 함수의 매개변수로 허용
 • 지역(local)에서 가변 길이 배열을 선언 가능
 • 함수명 앞에 데이터 타입을 명시하지 않아도 됨
@@ -80,120 +81,10 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 | 비교 연산자 (Comparison) | C++ 코드 (C++ code) |
 |------------------------|------------------|
-| ( x = y) | `x == y` |
-| ( x \neq y ) | `x != y` |
-| ( x \leq y ) | `x <= y` |
-| ( x \geq y ) | `x >= y` |
-
-
-
-
-
-<br>
-<br>
-<br>
-
-
-
-# **효율적인 알고리즘 분석의 중요성**
----
-비효율적인 알고리즘 분석을 통해 효율적인 알고리즘 분석의 중요성을 알아보도록 한다!
-
-<br>
-
-## **💡 순차 탐색(Sequential Search) vs 이진 탐색(Binary Search)**  
-**[ 이진 탐색(Binary Search) ]**
-
-> **while 루프에서 두 번 비교하는가, 한 번 비교하는가?**  
-• while 루프에서 x와 S[mid]를 비교하는 과정이 **각 반복마다 두 번 발생**한다(단, x를 찾은 경우 제외) 
-• 그러나 효율적인 어셈블리 언어(assembler) 구현에서는 **한 번만 비교하도록 최적화할 수 있음**
-• 즉, S[mid]와의 비교 결과를 조건 코드(condition code)에 설정하고, 이를 기반으로 분기(branch)를 수행할 수 있음
-• 이를 통해 while 루프 내에서 **한 번만 비교하는 방식으로 동작할 수 있음**
-
-<br>
-
-**[ 이진 탐색 알고리즘에서 연속된 32개의 숫자 비교 횟수 ]**
-- 아래 그림에서는 **배열의 32개 연속된 요소 중 특정 값을 찾는 과정**을 보여줌
-- 이진 탐색에서는 매 반복마다 탐색 범위가 절반으로 줄어듦
-
-<br>
-
-**[ 순차 탐색(Sequential Search) vs. 이진 탐색(Binary Search) 비교 ]**  
-
-|배열 크기|순차탐색 비교 횟수|이진탐색 비교 횟수|
-|:---:|:---:|:---:|
-|**128**|128|8|
-|**1,024**|1,024|11|
-|**1,048,576**|1,048,576|21|
-|**4,294,967,296**|4,294,967,296|33|
-
-> **순차 탐색(Sequential Search)**
-• 입력 크기 n이 증가할수록 비교 횟수가 **선형적(O(n))**으로 증가
-• 4,294,967,296개의 요소가 있을 때, 4,294,967,296번 비교
-
-> **이진 탐색(Binary Search)**
-• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임
-• 4,294,967,296개의 요소가 있을 때, 단 33번의 비교
-
-
-
-<br>
-<br>
-
-## **💡 피보나치 수열(The Fibonacci Sequence)**
-**피보나치 수열의 정의**
-
-```
-f0 = 0
-f1 = 1
-fn = fn-1 + fn-2 (for n >= 2)
-```
-
-<br>
-
-**처음 몇 개 항 계산**
-
-```
-f2 = f1 + f0 = 1 + 0 = 1
-f3 = f2 + f1 = 1 + 1 = 2
-f4 = f3 + f2 = 2 + 1 = 3
-f5 = f4 + f3 = 3 + 2 = 5
-...
-```
-
-<br>
-
-**재귀적 방식의 비효율성 증명**
-• 첫 7개의 값에서 n이 2씩 증가할 때 마다 계산해야하는 항의 개수가 2배 이상 증가 > 계산량이 기하급수적으로 증가
-
-|n|0|1|2|3|4|5|6|
-|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-|계산해야하는 항의 개수|1|1|3|5|9|15|25|
-
-
-<br>
-
-**재귀호출 트리를 이용한 비효율성 증명**
-
-```
-               fib(5)
-              /       \
-        fib(3)        fib(4)
-       /     \        /     \
-   fib(1)   fib(2)  fib(2)  fib(3)
-            /     \        /     \
-       fib(0)  fib(1)  fib(1)  fib(2)
-                            /     \
-                       fib(0)  fib(1)
-```
-
-```
-T(n) > 2 * T(n-2)
-     > 2 * 2 * T(n-4)
-     > 2 * 2 * 2 * T(n-6)
-     ...
-     > 2 * 2 * 2 * ... * T(0)
-```
+| ( $x = y$) | `x == y` |
+| ( $x \neq y$ ) | `x != y` |
+| ( $x \leq y$ ) | `x <= y` |
+| ( $x \geq y$ ) | `x >= y` |
 
 
 
