--- a/_pages/프로그래밍/DS, AI/al01-2.md
+++ b/_pages/프로그래밍/DS, AI/al01-2.md
@@ -23,6 +23,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 <br>
 
 # **알고리즘 예시**
+---
 **[ 예제 1 ]**
 > 알고리즘: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
@@ -31,7 +32,8 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 • 매개변수: 리스트 S, 리스트의 크기 n
 • 인스턴스: S=[10,7,11,5,13,8], n=6
 
-➢ 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
+`참고` 
+리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
 
 <br>
 
@@ -40,13 +42,14 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 > 알고리즘: 리스트 S에 있는 n개의 숫자 중에서 숫자 x가 존재하는지 판단하라
 만약 x가 리스트 S에 포함되어 있다면 "yes"를 반환하고, 그렇지 않다면 "no"를 반환하라
 
-• 매개변수: S, n, x가 존재한다(n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
+• 매개변수: S, n, x가 존재한다
+    (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
 • 인스턴스: S=[10,7,11,5,13,8], n=6, x=5
 • Solution:"yes, x는 S 안에 있다."
 
 <br>
 
-**서술적 알고리즘(Descriptive Algorithm)의 문제점**
+**`참고` 서술적 알고리즘(Descriptive Algorithm)의 문제점**
 • 복잡한 알고리즘을 이러한 방식으로 작성하는 것은 어렵고, 작성하더라도 사람이 이를 이해하는 것이 쉽지 않다
 • 영어 문장으로 표현된 알고리즘을 컴퓨터 언어로 변환하는 방법이 명확하지 않다
 • 즉, 자연어 기반의 알고리즘 설명은 비효율적일 수 있으며, 이를 보다 명확하고 체계적으로 정리할 필요가 있다
@@ -150,11 +153,11 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 ## **💡 피보나치 수열(The Fibonacci Sequence)**
 **[ 피보나치 수열의 정의 ]**
 
-$
+```
 f0 = 0
 f1 = 1
 fn = fn-1 + fn-2 (for n >= 2)
-$
+```
 
 <br>
 
@@ -163,13 +166,13 @@ $
 **✔︎ 재귀적 방식의 피보나치 수열**
 > 처음 몇 개 항 계산
 
-$
+```
 f2 = f1 + f0 = 1 + 0 = 1
 f3 = f2 + f1 = 1 + 1 = 2
 f4 = f3 + f2 = 2 + 1 = 3
 f5 = f4 + f3 = 3 + 2 = 5
 ...
-$
+```
 
 <br>
 
@@ -198,26 +201,26 @@ $
                        fib(0)  fib(1)
 ```
 
-$
+```
 T(n) > 2 * T(n-2)
      > 2 * 2 * T(n-4)
      > 2 * 2 * 2 * T(n-6)
      ...
      > 2 * 2 * 2 * ... * T(0)
-$
+```
 
 
 
-## **피보나치 수열의 n번째 항을 계산하는 알고리즘**  
+**✔︎ 피보나치 수열의 n번째 항을 계산하는 알고리즘**  
 
-**[ 정리 (Theorem)]**  
+**(1) 정리 (Theorem)**  
 > 만약 $T(n)$이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, $n\geq2$ 일 때 다음이 성립한다.  
   $T(n) \approx 2^{n/2}$
 
 
 <br>
 
-**[ 증명 (Proof) ]**  
+**(2) 증명 (Proof)**  
 **귀납법 기초(Base Case)**  
 - 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 
 - $n = 2 $및 $n = 3 $에 대한 값:  
@@ -234,36 +237,31 @@ $
 - $T(n) > 2^{n/2} $임을 보여야 함.  
 - $T(n) $은 $T(n-1) $과 $T(n-2) $의 합, 그리고 루트 노드 1개로 구성됨.  
 
-  $T(n) = T(n-1) + T(n-2) + 1$
+```
+T(n) = T(n-1) + T(n-2) + 1
 
-  $
-  > 2^{(n-1)/2} + 2^{(n-2)/2} + 1
-  $
-
-  $
-  > 2^{(n-2)/2} + 2^{(n-2)/2} + 1
-  $
-
-  $
-  = 2^{(n/2)} - 1
-  $
-
-- 따라서 **$T(n) > 2^{n/2} $가 성립함이 증명됨.**  
+T(n) > 2^{n/2} $가 성립함이 증명
+```
 
 
+**[ 반복적 방식 vs. 재귀적 방식의 실행 시간 비교 ]**  
 
-**반복적 방식 vs. 재귀적 방식의 실행 시간 비교**  
-
-- **반복문을 활용하면 배열 $f $를 사용하지 않고도 알고리즘을 작성할 수 있음**.  
-- **이전 두 개의 항만 필요하기 때문에, 배열 없이 구현 가능**.  
-- **$fib2(n) $을 구하기 위해, 반복적 알고리즘은 첫 $n+1 $개의 항을 한 번씩만 계산**.  
-  - 즉, **총 $n+1 $개의 계산이 필요**.  
-  - **가정:** 한 항의 계산 시간이 **1ns**라고 가정.  
+• 반복문을 활용하면 배열 $f $를 사용하지 않고도 알고리즘을 작성할 수 있음
+• 이전 두 개의 항만 필요하기 때문에, 배열 없이 구현 가능
+• fib2(n)을 구하기 위해, 반복적 알고리즘은 첫 $n+1 $개의 항을 한 번씩만 계산 > 즉, **총 $n+1 $개의 계산이 필요
+• 가정: 한 항의 계산 시간이 **1ns**라고 가정.  
 
 
-**실행 시간 비교표**  
+**[ 결론 ]**  
+- **반복적 방식(Iterative Approach)**은 **선형 시간 $O(n) $** 으로 수행됨.  
+- **재귀적 방식(Recursive Approach)**은 **지수 시간 $O(2^n) $** 으로 매우 비효율적.  
+- **반복적 방식이 훨씬 빠르며, 큰 $n $에서 실행 시간이 엄청난 차이를 보임**.
 
-| $n $| 반복적 방식에서 계산된 항 ($n+1 $) | 재귀적 방식에서 계산된 항 ($2^{n/2} $) | 알고리즘 1.7을 사용할 때 실행 시간 | 알고리즘 1.6을 사용할 때 실행 시간 |
+<bs>
+
+**[ 실행 시간 비교표 ]**  
+
+| n| 반복적 방식에서 계산된 항 ($n+1 $) | 재귀적 방식에서 계산된 항 ($2^{n/2} $) | 알고리즘 1.7을 사용할 때 실행 시간 | 알고리즘 1.6을 사용할 때 실행 시간 |
 |------|------------------|------------------|------------------|------------------|
 | 40   | 41              | 1,048,576        | 41 ns           | 1048 μs          |
 | 60   | 61              | $1.1 \times 10^9 $| 61 ns | 1 s |
@@ -274,10 +272,7 @@ $
 | 200  | 201             | $1.3 \times 10^{30} $| 201 ns | $4 \times 10^{13} $years |
 
 
-**[ 결론 ]**  
-- **반복적 방식(Iterative Approach)**은 **선형 시간 $O(n) $** 으로 수행됨.  
-- **재귀적 방식(Recursive Approach)**은 **지수 시간 $O(2^n) $** 으로 매우 비효율적.  
-- **반복적 방식이 훨씬 빠르며, 큰 $n $에서 실행 시간이 엄청난 차이를 보임**.
+
 
 
 <br>
