--- a/_pages/프로그래밍/DS, AI/al01-2.md
+++ b/_pages/프로그래밍/DS, AI/al01-2.md
@@ -9,6 +9,8 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 # **알고리즘 관련 용어정리**
 ---
 
+## **용어정리**
+
 |용어|설명|
 |:---:|:---:|
 |문제(Problem)|컴퓨터 프로그램은 개별적인 모듈로 구성되며, 각 모듈은 컴퓨터가 이해할 수 있는 방식으로 특정한 작업을 해결함, 이 책에서 다루는 내용은 전체 프로그램의 설계가 아니라, 특정한 작업을 수행하는 개별 모듈의 설계이다. 이러한 특정한 작업을 ‘문제(Problem)’라고 한다|
@@ -19,11 +21,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 |의사코드(Pseudocode)|알고리즘을 사람이 이해하기 쉽게 표현한 것으로, 특정 프로그래밍 언어의 문법을 따르지 않고 자연어와 유사한 형식으로 작성된 코드|
 
 <br>
-<br>
-<br>
 
-# **알고리즘 예시**
----
 **[ 예제 1 ]**
 > 알고리즘: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
@@ -32,8 +30,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 • 매개변수: 리스트 S, 리스트의 크기 n
 • 인스턴스: S=[10,7,11,5,13,8], n=6
 
-`참고` 
-리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
+`참고` 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
 
 <br>
 
@@ -61,7 +58,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 # **의사코드(Pseudocode)**
 ---
 ## **의사코드**
-> 
+> `의사코드(Pseudocode)`는 `사람이 이해하기 쉬운 방식으로 알고리즘을 표현한 코드`로, 프로그래밍 언어의 문법을 따르지는 않지만 알고리즘의 흐름을 쉽게 설명할 수 있도록 작성된다
 
 <br>
 
@@ -108,23 +105,51 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 # **효율적인 알고리즘 분석의 중요성**
 ---
 비효율적인 알고리즘 분석을 통해 효율적인 알고리즘 분석의 중요성을 알아보도록 한다!
+이 글에서는 순차탐색과 이진탐색, 피보나치 수열을 사용한다
 
 <br>
 
 ## **💡 순차 탐색(Sequential Search) vs 이진 탐색(Binary Search)**  
 **[ 이진 탐색(Binary Search) ]**
 
+```c
+/*
+Binary Search
+Problem: 정렬된 크기 n의 배열 S에서 특정 키 x가 존재하는 지 여부를 판단하라
+Input: 양의 정수 n,
+        인덱스가 1부터 n까지인 정렬된(비내림차순) 배열 S,
+        탐색할 키 x
+Output: x가 존재하지 않는 경우, 배열에서의 위치
+        존재하는 경우, 0 반환
+*/
+
+void binsearch (int n, 
+                const keytype S[], 
+                keytype x, 
+                index& location)
+{
+    index low, high, mid;
+    low = 1; high = n;
+    location = 0;
+
+    while (low ≤ high && location == 0) {
+        mid = ⌊(low + high)/2⌋;
+        if (x == S[mid])
+            location = mid;
+        else if (x < S[mid])
+            high = mid - 1;
+        else
+            low = mid + 1;
+    }
+}
+
+```
+
 > **while 루프에서 두 번 비교하는가, 한 번 비교하는가?**  
 • while 루프에서 x와 S[mid]를 비교하는 과정이 **각 반복마다 두 번 발생**한다(단, x를 찾은 경우 제외) 
 • 그러나 효율적인 어셈블리 언어(assembler) 구현에서는 **한 번만 비교하도록 최적화할 수 있음**
 • 즉, S[mid]와의 비교 결과를 조건 코드(condition code)에 설정하고, 이를 기반으로 분기(branch)를 수행할 수 있음
 • 이를 통해 while 루프 내에서 **한 번만 비교하는 방식으로 동작할 수 있음**
-
-<br>
-
-**[ 이진 탐색 알고리즘에서 연속된 32개의 숫자 비교 횟수 ]**
-- 아래 그림에서는 **배열의 32개 연속된 요소 중 특정 값을 찾는 과정**을 보여줌
-- 이진 탐색에서는 매 반복마다 탐색 범위가 절반으로 줄어듦
 
 <br>
 
@@ -142,7 +167,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 • 4,294,967,296개의 요소가 있을 때, 4,294,967,296번 비교
 
 > **이진 탐색(Binary Search)**
-• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임
+• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임(매 반복마다 탐색 범위가 절반으로 줄어들기 때문)
 • 4,294,967,296개의 요소가 있을 때, 단 33번의 비교
 
 
@@ -164,9 +189,9 @@ fn = fn-1 + fn-2 (for n >= 2)
 **[ 재귀적 방식 VS 반복적 방식 ]**
 
 **✔︎ 재귀적 방식의 피보나치 수열**
-> 처음 몇 개 항 계산
 
 ```
+// 처음 몇 개 항 계산
 f2 = f1 + f0 = 1 + 0 = 1
 f3 = f2 + f1 = 1 + 1 = 2
 f4 = f3 + f2 = 2 + 1 = 3
@@ -178,18 +203,17 @@ f5 = f4 + f3 = 3 + 2 = 5
 
 **✔︎ 재귀적 방식의 비효율성 증명**
 
-> 첫 7개의 값에서 n이 2씩 증가할 때 마다 계산해야하는 항의 개수가 2배 이상 증가 > 계산량이 기하급수적으로 증가
-
 |n|0|1|2|3|4|5|6|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
 |계산해야하는 항의 개수|1|1|3|5|9|15|25|
 
+• 첫 7개의 값에서 n이 2씩 증가할 때 마다 계산해야하는 항의 개수가 2배 이상 증가 > 계산량이 기하급수적으로 증가
 
 <br>
 
-> 재귀호출 트리를 이용한 비효율성 증명
 
 ```
+// 재귀호출 트리를 이용한 비효율성 증명
                fib(5)
               /       \
         fib(3)        fib(4)
@@ -209,75 +233,86 @@ T(n) > 2 * T(n-2)
      > 2 * 2 * 2 * ... * T(0)
 ```
 
-
+<br>
 
 **✔︎ 피보나치 수열의 n번째 항을 계산하는 알고리즘**  
 
+```c
+/*
+Fibonacci Sequence
+Problem: 피보나치 수열의 n번째 항을 구하라
+Input: a nonnegative integer n
+Output: fib(피보나치 수열의 n번 째 항)
+*/
+
+int fib (int n)     // 재귀적 방식
+{
+    if (n <= 1)
+        return n;
+    else
+        return fib(n-1) + fib(n-2);
+}
+
+
+int fib2 (int n)    // 반복적 방식
+{
+    index i;
+    int f[0], f[1];
+
+    f[0] = 0;
+    if (n > 0)
+        f[1] = 1;
+
+    for (i = 2; i ≤ n; i++)
+        f[i] = f[i-1] + f[i-2];
+
+    return f[n];
+}
+
+```
 **(1) 정리 (Theorem)**  
-> 만약 $T(n)$이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, $n\geq2$ 일 때 다음이 성립한다.  
-  $T(n) \approx 2^{n/2}$
+> 만약 `T(n)`이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, `n >= 2` 일 때 `T(n) > 2^{n/2}` 이 성립한다
 
 
 <br>
 
 **(2) 증명 (Proof)**  
 **귀납법 기초(Base Case)**  
-- 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 
-- $n = 2 $및 $n = 3 $에 대한 값:  
-  $T(2) = 3 \approx 2^{2/2}$
-  $T(3) = 5 \approx 2^{3/2}$
+• 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 
+• `n = 2` 및 `n = 3`에 대한 값:  
+  `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`
 
 **귀납 가설(Induction Hypothesis)**  
-- 귀납 가설을 세우는 한 가지 방법은 **$m < n $인 모든 $m $에 대해 명제가 성립한다고 가정하는 것**.  
-- 그런 다음, 귀납 단계에서 **이 가정이 $n $에 대해서도 성립함을 보이면 됨**.  
-- 이 기법이 증명에 사용됨. 즉, $2 \leq m < n $인 모든 $m $에 대해:  
-  $T(m) > 2^{m/2}$
+• 귀납 가설을 세우는 한 가지 방법은 **$m < n $인 모든 $m $에 대해 명제가 성립한다고 가정하는 것**.  
+• 그런 다음, 귀납 단계에서 **이 가정이 $n $에 대해서도 성립함을 보이면 됨**.  
+• 이 기법이 증명에 사용됨. 즉, $2 \leq m < n $인 모든 $m $에 대해: `T(m) > 2^{m/2}`
 
 **귀납 단계(Induction Step)**  
-- $T(n) > 2^{n/2} $임을 보여야 함.  
-- $T(n) $은 $T(n-1) $과 $T(n-2) $의 합, 그리고 루트 노드 1개로 구성됨.  
+• `T(n) > 2^{n/2}`임을 보여야 함.
+• `T(n)`은 `T(n-1)`과 `T(n-2)`의 합, 루트 노드 1개로 구성됨
 
 ```
 T(n) = T(n-1) + T(n-2) + 1
-
-T(n) > 2^{n/2} $가 성립함이 증명
+     > 2^{(n-1)/2} + 2^{(n-2)/2} + 1
+     > 2^{(n-2)/2} + 2^{(n-2)/2} 
+     = 2 X 2^{(n/2)-1} =  2 ^ {n/2}
 ```
 
 
 **[ 반복적 방식 vs. 재귀적 방식의 실행 시간 비교 ]**  
 
-• 반복문을 활용하면 배열 $f $를 사용하지 않고도 알고리즘을 작성할 수 있음
+• 반복문을 활용하면 배열 `$`를 사용하지 않고도 알고리즘을 작성할 수 있음
 • 이전 두 개의 항만 필요하기 때문에, 배열 없이 구현 가능
-• fib2(n)을 구하기 위해, 반복적 알고리즘은 첫 $n+1 $개의 항을 한 번씩만 계산 > 즉, **총 $n+1 $개의 계산이 필요
-• 가정: 한 항의 계산 시간이 **1ns**라고 가정.  
+• `fib2(n)`을 구하기 위해, 반복적 알고리즘은 첫 `n+1`개의 항을 한 번씩만 계산 > 즉, 총 `n+1`개의 계산이 필요
+• 가정: 한 항의 계산 시간이 **1ns**라고 가정
 
+<br>
 
 **[ 결론 ]**  
-- **반복적 방식(Iterative Approach)**은 **선형 시간 $O(n) $** 으로 수행됨.  
-- **재귀적 방식(Recursive Approach)**은 **지수 시간 $O(2^n) $** 으로 매우 비효율적.  
+- **반복적 방식(Iterative Approach)**은 **선형 시간 `O(n)`** 으로 수행됨.  
+- **재귀적 방식(Recursive Approach)**은 **지수 시간 `O(2^n)`** 으로 매우 비효율적.  
 - **반복적 방식이 훨씬 빠르며, 큰 $n $에서 실행 시간이 엄청난 차이를 보임**.
 
-<bs>
-
-**[ 실행 시간 비교표 ]**  
-
-| n| 반복적 방식에서 계산된 항 ($n+1 $) | 재귀적 방식에서 계산된 항 ($2^{n/2} $) | 알고리즘 1.7을 사용할 때 실행 시간 | 알고리즘 1.6을 사용할 때 실행 시간 |
-|------|------------------|------------------|------------------|------------------|
-| 40   | 41              | 1,048,576        | 41 ns           | 1048 μs          |
-| 60   | 61              | $1.1 \times 10^9 $| 61 ns | 1 s |
-| 80   | 81              | $1.1 \times 10^{12} $| 81 ns | 18 min |
-| 100  | 101             | $1.1 \times 10^{15} $| 101 ns | 13 days |
-| 120  | 121             | $1.2 \times 10^{18} $| 121 ns | 36 years |
-| 160  | 161             | $1.2 \times 10^{24} $| 161 ns | $3.8 \times 10^7 $years |
-| 200  | 201             | $1.3 \times 10^{30} $| 201 ns | $4 \times 10^{13} $years |
-
-
-
-
-
-<br>
-<br>
-<br>
 
 
 
