--- a/_pages/프로그래밍/DS, AI/al01-2.md
+++ b/_pages/프로그래밍/DS, AI/al01-2.md
@@ -60,8 +60,9 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 ## **의사코드**
 > `의사코드(Pseudocode)`는 `사람이 이해하기 쉬운 방식으로 알고리즘을 표현한 코드`로, 프로그래밍 언어의 문법을 따르지는 않지만 알고리즘의 흐름을 쉽게 설명할 수 있도록 작성된다
 
-<br>
 
+<br>
+<br>
 
 ## **의사코드와 C/C++ 코드의 차이점**
 • 2차원 가변 길이 배열을 함수의 매개변수로 허용
@@ -96,6 +97,60 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 | ( $x \leq y$ ) | `x <= y` |
 | ( $x \geq y$ ) | `x >= y` |
 
+<br>
+<br>
+
+## **알고리즘 예시**
+
+```c
+/*
+Squential Search
+Problem: Is the key x in the array S of n keys?
+Input(parameters): positive integer n, 
+                    array of keys S indexed from 1 to n,
+                    and a key x.
+Outouts: location, the location of x in S(0 if x is not in S)
+*/
+
+void squential(int n,
+                const keytype S[],
+                keytype x,
+                index& location)
+{
+    location = 1;
+    while (location <= n && S[location] !=x) {
+        location ++;
+    }
+    if(location > n)
+        location = 0;
+}
+```
+
+```c
+/*
+Matrix Multiplication
+Problem: 두 개의 n×n 행렬의 곱을 구하라
+Inputs: a positive integer (n양의 정수 n), 
+        two-dimensional arrays of numbers A and B ( n x n 크기의 2차원 배열 A와 B),
+        each of which has both its rows and columns indexed from 1 to n
+        (각 행과 열의 인덱스는 1부터 n까지)
+Outputs: A와 B를 곱한 결과인 n x n 크기의 2차원 배열 C
+*/
+
+void matrixmult (int n, const number A[][], const number B[][], number C[][])
+{
+    index i, j, k;
+    for (i = 1; i ≤ n; i++) {
+        for (j = 1; j ≤ n; j++) {
+            C[i][j] = 0;
+            for (k = 1; k ≤ n; k++) {
+                C[i][j] = C[i][j] + A[i][k] * B[k][j];
+            }
+        }
+    }
+}
+
+```
 
 
 <br>
@@ -190,13 +245,31 @@ fn = fn-1 + fn-2 (for n >= 2)
 
 **✔︎ 재귀적 방식의 피보나치 수열**
 
-```
+```c
 // 처음 몇 개 항 계산
 f2 = f1 + f0 = 1 + 0 = 1
 f3 = f2 + f1 = 1 + 1 = 2
 f4 = f3 + f2 = 2 + 1 = 3
 f5 = f4 + f3 = 3 + 2 = 5
 ...
+```
+
+```c
+/*
+Fibonacci Sequence
+Problem: 피보나치 수열의 n번째 항을 구하라
+Input: a nonnegative integer n
+Output: fib(피보나치 수열의 n번 째 항)
+*/
+
+int fib (int n)     // 재귀적 방식
+{
+    if (n <= 1)
+        return n;
+    else
+        return fib(n-1) + fib(n-2);
+}
+
 ```
 
 <br>
@@ -245,15 +318,6 @@ Input: a nonnegative integer n
 Output: fib(피보나치 수열의 n번 째 항)
 */
 
-int fib (int n)     // 재귀적 방식
-{
-    if (n <= 1)
-        return n;
-    else
-        return fib(n-1) + fib(n-2);
-}
-
-
 int fib2 (int n)    // 반복적 방식
 {
     index i;
@@ -270,6 +334,7 @@ int fib2 (int n)    // 반복적 방식
 }
 
 ```
+
 **(1) 정리 (Theorem)**  
 > 만약 `T(n)`이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, `n >= 2` 일 때 `T(n) > 2^{n/2}` 이 성립한다
 
