--- a/_pages/프로그래밍/DS, AI/al01-2.md
+++ b/_pages/프로그래밍/DS, AI/al01-2.md
@@ -11,27 +11,28 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 ## **용어정리**
 
+
 |용어|설명|
 |:---:|:---:|
-|문제(Problem)|컴퓨터 프로그램은 개별적인 모듈로 구성되며, 각 모듈은 컴퓨터가 이해할 수 있는 방식으로 특정한 작업을 해결함, 이 책에서 다루는 내용은 전체 프로그램의 설계가 아니라, 특정한 작업을 수행하는 개별 모듈의 설계이다. 이러한 특정한 작업을 ‘문제(Problem)’라고 한다|
-|매개변수(Parameters)|문제 포함된 특정한 값이 정해지지 않은 변수|
-|인스턴스(Instance)|문제는 매개변수를 포함하므로, 각각의 매개변수 값이 할당될 때마다 서로 다른 문제 인스턴스(instance)가 생성된다. 특정한 매개변수 값이 할당된 문제를 "문제의 인스턴스(Instance of a Problem)|
-|해결방법(Solution)|해당 인스턴스에서의 해결 방법(Solution)은 주어진 질문에 대한 답|
-|알고리즘(Algorithm)|컴퓨터가 문제의 모든 인스턴스를 해결할 수 있도록 하기위해 각 인스턴스에 대한 해결 방법을 명확한 단계별 절차(step-by-step procedure)로 |
-|의사코드(Pseudocode)|알고리즘을 사람이 이해하기 쉽게 표현한 것으로, 특정 프로그래밍 언어의 문법을 따르지 않고 자연어와 유사한 형식으로 작성된 코드|
+|`문제(Problem)`|• 컴퓨터: 개별적인 모듈로 구성 <br> • 모듈: 컴퓨터가 이해할 수 있는 방식으로 특정한 작업을 해결 <br> • **문제: 개별 모듈이 수행하는 특정한 작업**|
+|`매개변수(Parameters)`|문제 포함된 특정한 `값이 정해지지 않은 변수`|
+|`인스턴스(Instance)`|• 문제의 매개변수에 값이 할당될 때 마다 생성되는 것 <br> • 문제의 인스턴스: 특정한 매개변수 값이 할당된 문제|
+|`해결방법(Solution)`|해당 인스턴스에서 주어진 `질문에 대한 답`|
+|`알고리즘(Algorithm)`|컴퓨터가 문제의 모든 인스턴스를 해결할 수 있도록 하기위해 각 인스턴스에 대한 해결 방법을 명확한 단계별 절차(step-by-step procedure) |
+|`의사코드(Pseudocode)`|`알고리즘을 사람이 이해하기 쉽게 표현`한 것으로, 특정 프로그래밍 언어의 문법을 따르지 않고 자연어와 유사한 형식으로 작성된 코드|
 
 <br>
 
 **[ 예제 1 ]**
 > 알고리즘: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
-비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
+
 
 • Solution: 5,7,8,10,11,13
 • 매개변수: 리스트 S, 리스트의 크기 n
 • 인스턴스: S=[10,7,11,5,13,8], n=6
 
 `참고` 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
-
+`참고` 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
 <br>
 
 **[ 예제 2 ]**
@@ -39,8 +40,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 > 알고리즘: 리스트 S에 있는 n개의 숫자 중에서 숫자 x가 존재하는지 판단하라
 만약 x가 리스트 S에 포함되어 있다면 "yes"를 반환하고, 그렇지 않다면 "no"를 반환하라
 
-• 매개변수: S, n, x가 존재한다
-    (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
+• 매개변수: S, n, x가 존재한다 (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
 • 인스턴스: S=[10,7,11,5,13,8], n=6, x=5
 • Solution:"yes, x는 S 안에 있다."
 
@@ -92,10 +92,10 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 | 비교 연산자 (Comparison) | C++ 코드 (C++ code) |
 |------------------------|------------------|
-| ( $x = y$) | `x == y` |
-| ( $x \neq y$ ) | `x != y` |
-| ( $x \leq y$ ) | `x <= y` |
-| ( $x \geq y$ ) | `x >= y` |
+| `x = y` | `x == y` |
+| `x ≠ y` | `x != y` |
+| `x ≤ y` | `x <= y` |
+| `x ≥ y` | `x >= y` |
 
 <br>
 <br>
@@ -243,7 +243,7 @@ fn = fn-1 + fn-2 (for n >= 2)
 
 **[ 재귀적 방식 VS 반복적 방식 ]**
 
-**✔︎ 재귀적 방식의 피보나치 수열**
+**(1) 재귀적 방식의 피보나치 수열**
 
 ```c
 // 처음 몇 개 항 계산
@@ -274,7 +274,7 @@ int fib (int n)     // 재귀적 방식
 
 <br>
 
-**✔︎ 재귀적 방식의 비효율성 증명**
+**(2) 재귀적 방식의 비효율성 증명**
 
 |n|0|1|2|3|4|5|6|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -308,7 +308,9 @@ T(n) > 2 * T(n-2)
 
 <br>
 
-**✔︎ 피보나치 수열의 n번째 항을 계산하는 알고리즘**  
+**[ 반복적 방식의 피보나치 수열 ]**
+
+**> 피보나치 수열의 n번째 항을 계산하는 알고리즘(반복적 방식)**  
 
 ```c
 /*
@@ -344,16 +346,15 @@ int fib2 (int n)    // 반복적 방식
 **(2) 증명 (Proof)**  
 **귀납법 기초(Base Case)**  
 • 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 
-• `n = 2` 및 `n = 3`에 대한 값:  
-  `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`
+• `n = 2` 및 `n = 3`에 대한 값: `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`
 
 **귀납 가설(Induction Hypothesis)**  
-• 귀납 가설을 세우는 한 가지 방법은 **$m < n $인 모든 $m $에 대해 명제가 성립한다고 가정하는 것**.  
-• 그런 다음, 귀납 단계에서 **이 가정이 $n $에 대해서도 성립함을 보이면 됨**.  
-• 이 기법이 증명에 사용됨. 즉, $2 \leq m < n $인 모든 $m $에 대해: `T(m) > 2^{m/2}`
+• 귀납 가설을 세우는 한 가지 방법은 `m < n`인 모든 `m`에 대해 명제가 성립한다고 가정하는 것**
+• 그런 다음, 귀납 단계에서 **이 가정이 `n`에 대해서도 성립함을 보이면 됨** 
+• 이 기법이 증명에 사용됨. 즉, `2 ≤ m < n` 인 모든 `m`에 대해: `T(m) > 2^{m/2}`
 
 **귀납 단계(Induction Step)**  
-• `T(n) > 2^{n/2}`임을 보여야 함.
+• `T(n) > 2^{n/2}`임을 보여야 함
 • `T(n)`은 `T(n-1)`과 `T(n-2)`의 합, 루트 노드 1개로 구성됨
 
 ```
