--- a/_pages/프로그래밍/DS, AI/al03.md
+++ b/_pages/프로그래밍/DS, AI/al03.md
@@ -8,71 +8,70 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 
 # **복잡도분석**
 ---
+## **복잡도 분석의 일반적인 방식**
+**[ 알고리즘의 시간 복잡도 분석 ]**
+> `입력 크기에 대해 기본 연산이 몇 번` 수행되는지 결정
+• 전체 실행 시간(작업량): `기본 연산(basic operation)`이 수행되는 횟수와 비례
+• 알고리즘의 실행 시간: `입력 크기(input size)`가 증가함에 따라 증가
+=> 알고리즘의 효율성은 기본 연산이 입력 크기의 함수로 몇 번 수행되는지를 분석하는 것으로 결정됨
 
+<br>
+
+**[ 복잡도 분석을 위해서 ]**
 > 1단계: **입력 크기 결정하기**
 2단계: **기본 연산 선택하기**
 
-<br>
-
-**입력크기(input size) 결정하기**
-일반적으로 알고리즘의 실행 시간은 입력 크기(input size)가 증가함에 따라 증가하며, 전체 실행 시간은 기본 연산(basic operation)이 수행되는 횟수와 비례함.
-
-따라서, 알고리즘의 효율성은 기본 연산이 입력 크기의 함수로 몇 번 수행되는지를 분석하는 것으로 결정됨.
-
-대부분의 알고리즘에서는 입력 크기를 정의할 수 있는 합리적인 방법을 찾을 수 있음.
-입력 크기 ≠ 입력의 크기 자체
-이진 표현(binary representation)을 사용할 경우, 입력 n을 인코딩하는 데 필요한 비트 수는 lg(n)+1
+**(1) 입력크기(input size) 결정하기**
+• 대부분의 알고리즘에서는 입력 크기를 정의할 수 있는 합리적인 방법을 찾을 수 있음
+• 입력 크기 ≠ 입력의 크기 자체
+> 이진 표현(binary representation)을 사용할 경우, 입력 n을 인코딩하는 데 필요한 비트 수는 lg(n)+1
 예를 들어, n=13일 경우, 이진수 표현은 1101이며, 입력 크기 = 4비트
 
-<br>
-
-**기본연산 선택하기**
-✔ 알고리즘 내에서 특정 명령어 또는 명령어 그룹을 선택할 것
-알고리즘이 수행하는 총 작업량은 특정 기본 연산이 몇 번 수행되는지에 비례
-예를 들어, 순차 탐색(sequential search) 또는 이진 탐색(binary search) 알고리즘에서 **비교 연산(comparison instruction)**이 반복적으로 수행됨
-기본 연산이 알고리즘 내에서 몇 번 수행되는지를 결정함으로써, 두 알고리즘 간의 상대적인 효율성을 분석할 수 있음
-
-
+• 알고리즘의 효율성을 `종속적인 요인에 따라 분석하지 말 것` (입력크기는 독립적)
+❌ CPU 사이클 수는 알고리즘의 성능을 결정하는 기준이 될 수 없음
+❌ 모든 명령어를 개별적으로 계산하는 것은 적절하지 않음: 언어 / 개발자의 코드 스타일에 따라 실행되는 명령어 수가 달라지므로 
 
 <br>
-<br>
-<br>
 
-# **복잡도 분석의 일반적인 방식**
-✔ 알고리즘의 시간 복잡도 분석
-입력 크기에 대해 기본 연산이 몇 번 수행되는지 결정
-알고리즘이 어떻게 구현되었는지에 대한 세부 사항은 고려하지 않으며, 기본 연산이 최대한 효율적으로 구현된다고 가정
-
-✔ 두 개의 기본 연산을 고려해야 할 수도 있음
-예시: 키 값을 비교하면서 정렬하는 알고리즘에서는
-비교 연산(comparison instruction)
-할당 연산(assignment instruction)
-이 두 개의 연산을 각각 기본 연산으로 고려 가능
+**(2) 기본연산 선택하기**
+• 알고리즘 내에서 특정 명령어 또는 명령어 그룹을 선택할 것
+예: 순차/이진탐색 알고리즘에서 **비교 연산(comparison instruction)**이 반복적으로 수행됨
+• 기본 연산이 알고리즘 내에서 몇 번 수행되는지를 결정함으로써, 두 알고리즘 간의 상대적인 효율성을 분석할 수 있음
+• 알고리즘이 어떻게 구현되었는지에 대한 세부 사항은 고려하지 않으며, 기본 연산이 최대한 효율적으로 구현된다고 가정
+• 두 개의 기본 연산을 고려해야 할 수도 있음
+예: 키 값을 비교하면서 정렬하는 알고리즘에서는 비교연산과 할당연산을 기본 연산으로 고려 가능
 따라서, 각 연산이 몇 번 수행되는지를 개별적으로 분석하면 알고리즘의 효율성을 보다 명확하게 파악할 수 있음
-
-**주의! 하면 안될 것**
-❌ 알고리즘의 효율성을 종속적인 요인에 따라 분석하지 말 것(입력크기는 독립적)
-특정 컴퓨터에서 실행될 때의 CPU 사이클 수는 알고리즘의 성능을 결정하는 기준이 될 수 없음.
-프로그래밍 언어 또는 개발자의 코드 스타일에 따라 실행되는 명령어 수가 달라지므로 모든 명령어를 개별적으로 계산하는 것은 적절하지 않음.
 
 ❌ 기본 연산의 반복 횟수를 증가시키는 단순한 루프 제어 명령어는 포함하지 말 것
 예를 들어, 루프를 제어하는 인덱스를 증가시키고 비교하는 연산은 고려 대상에서 제외
 기본 연산의 횟수를 셀 때, 반복문의 한 번 실행을 기본 연산의 한 번 수행으로 간주할 수도 있음
+
+
 
 <br>
 <br>
 <br>
 
 # **시간복잡도 분석**
+---
+
+> 시간복잡도 종류
+• Every-Case Time Complexity
+• Worst-Case Time Complexity (최악의 경우 시간 복잡도)
+• Average-Case Time Complexity (평균적인 경우의 시간 복잡도)
+• Best-Case Time Complexity (최선의 경우 시간 복잡도)
+
 
 **[ Every-Case Time Complexity ]**
 
-배열 요소 더하기(Add Array Members)’ 예제
+배열 요소 더하기(Add Array Members) 예제
 기본 연산: 배열의 각 항목을 합(sum)에 추가하는 연산
 입력 크기: n (배열 내 항목의 개수)
 배열 내 숫자의 값과 관계없이, for 루프를 n번 반복
 
-따라서, 기본 연산은 항상 n번 수행되며, 시간 복잡도는 다음과 같이 나타냄: T(n)=n
+기본 연산: 항상 n번 수행
+시간 복잡도: T(n)=n
+
 <br>
 ‘교환 정렬(Exchange Sort)’ 예제
 앞서 설명했듯이, 키 값을 비교하는 정렬 알고리즘의 경우
@@ -112,6 +111,7 @@ for-i 루프에서 n번 실행됨
 <br>
 <br>
 
+
 **[ Worst-Case Time Complexity (최악의 경우 시간 복잡도) ]**
 Sequential Search (순차 탐색)
 기본 연산: 배열 내 요소를 x와 비교
@@ -123,7 +123,9 @@ Sequential Search (순차 탐색)
 
 
 <br>
-Average-Case Time Complexity (평균적인 경우의 시간 복잡도)
+
+**[ Average-Case Time Complexity (평균적인 경우의 시간 복잡도) ]**
+
 개요
 정의: A(n)은 입력 크기가 n일 때 알고리즘이 기본 연산을 수행하는 평균 횟수
 평균적인 경우의 시간 복잡도 분석을 통해 A(n)을 구함
@@ -137,15 +139,7 @@ x가 k번째 슬롯에 위치할 확률은 1/n
 x를 찾기 위해 기본 연산이 k번 실행됨
 따라서, 평균 시간 복잡도는
 A(n)= 
-k=1
-∑
-n
-​
- k× 
-n
-1
-​
- = 
+k=1∑nk×  n1= 
 n
 1
 ​
@@ -223,7 +217,7 @@ p = 1/2이면, A(n) = 3n/4 + 1/4, 즉 평균적으로 배열의 3/4을 탐색
 <br>
 
 
-Best-Case Time Complexity (최선의 경우 시간 복잡도)
+**[ est-Case Time Complexity (최선의 경우 시간 복잡도) ]**
 개요
 정의: B(n)은 입력 크기가 n일 때 알고리즘이 기본 연산을 수행하는 최소 횟수
 최선의 경우의 시간 복잡도 분석을 통해 B(n)을 구함
@@ -246,46 +240,10 @@ x가 첫 번째 요소일 경우 한 번만 실행됨
 일반적인 개념
 *복잡도 함수 (complexity function)*는 양의 정수를 비음수 실수로 매핑하는 함수이다.
 특정 알고리즘의 시간 복잡도 또는 메모리 복잡도를 지칭하지 않는 경우, 일반적으로 표준 함수 표기법을 사용한다. 예를 들면:
-𝑓
-(
-𝑛
-)
-=
-𝑛
 f(n)=n
-𝑓
-(
-𝑛
-)
-=
-𝑛
-2
-f(n)=n 
-2
- 
-𝑓
-(
-𝑛
-)
-=
-log
-⁡
-𝑛
+f(n)=n^2 
 f(n)=logn
-𝑓
-(
-𝑛
-)
-=
-3
-𝑛
-2
-+
-4
-𝑛
-f(n)=3n 
-2
- +4n
+f(n)=3n^2 +4n
 
 
 
@@ -304,33 +262,10 @@ f(n)=3n
 비교 예제:
 
 두 개의 알고리즘이 동일한 문제를 해결한다고 가정하자.
-첫 번째 알고리즘: 시간 복잡도 
-𝑂
-(
-𝑛
-)
-O(n)
-두 번째 알고리즘: 시간 복잡도 
-𝑂
-(
-𝑛
-2
-)
-O(n 
-2
- )
+첫 번째 알고리즘: 시간 복잡도 O(n)
+두 번째 알고리즘: 시간 복잡도 O(n2)
 첫 번째 알고리즘이 더 효율적으로 보이지만, 특정 컴퓨터에서는 기본 연산을 처리하는 속도 차이에 따라 실행 시간이 달라질 수 있다.
 해결할 부등식:
-
-𝑛
-×
-1000
-𝑡
-<
-𝑛
-2
-×
-𝑡
 n×1000t<n 
 2
  ×t
