--- a/_pages/프로그래밍/DS, AI/al03.md
+++ b/_pages/프로그래밍/DS, AI/al03.md
@@ -111,7 +111,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 • 기본 연산: 배열 내 요소를 x와 비교
 • 입력 크기: n, 배열 내 요소 개수
 
-|
+
 <br>
 
 |시간복잡도|설명|
@@ -120,8 +120,7 @@ thumbnail: "/assets/img/thumbnail/mun.jpg"
 |`B(n) = 1`|x가 첫 번째 요소일 경우 한 번만 실행됨|
 |`A(n)`|• x가 배열 내 존재한다고 가정하면, 배열 내 모든 위치에 있을 확률이 동일함<br>• x가 k번째 슬롯에 위치할 확률은 1/n, x를 찾기 위해 기본 연산이 k번 실행됨<br>• 시간 복잡도: A(n)= ∑ (k × 1/n) = 1/n x ∑k = (n+1)/2|
 |`A(n)`|x가 배열에 없을 수도 있는 경우<br>x가 배열 내 존재할 확률은 p 없을 확률은 1-p, x가 k번째 슬롯에 있을 확률 p/n,x가 존재하면 k번 실행, 존재하지 않으면 n번 실행<br>시간 복잡도: |
-|`A(n)`|특수한 경우:
-p = 1이면, A(n) = (n+1)/2,p = 1/2이면, A(n) = 3n/4 + 1/4, 즉 평균적으로 배열의 3/4을 탐색|
+|`A(n)`|특수한 경우: p = 1이면, A(n) = (n+1)/2,p = 1/2이면, A(n) = 3n/4 + 1/4, 즉 평균적으로 배열의 3/4을 탐색|
 
 
 <br>
