--- a/_posts/develop/language/2025-03-11-java_02.markdown
+++ b/_posts/develop/language/2025-03-11-java_02.markdown
@@ -49,6 +49,23 @@ sidebar:
 <br>
 <br>
 
+# **식별자(identifier)**
+
+**식별자란?**
+> 클래스, 변수, 상수, 메소드 등에 붙이는 이름
+
+원칙
+불가능: 특수문자(`@`, `#`, `!` 등), 공백, 탭, 예약어(키워드), 논리리터럴(`null`, `true`), 널리터럴(`false`)
+가능: 한글, 유니코드(2byte), 
+첫문자에 : 숫자불가능, 일부 기호(`_`, `$`) 가능하지만 잘 안씀
+길이제한 없음
+대소문자 구별
+
+
+<br> 
+<br>
+<br>
+
 # **식(Expression)과 문장(Statement)**
 ---
 ## **식**
@@ -98,7 +115,7 @@ sidebar:
 <br>
 <br>
 
-# **자료형**
+# **자료형, 형변환**
 ---
 
 ## **자료형이란?**
@@ -215,7 +232,7 @@ class, 인터페이스, 문자열은 이후의 글에서 더 알아보도록 하
 <br>
 <br>
 
-# **자바 변수의 종류**
+# **자바 변수 + 상수**
 ---
 
 자바에서 변수는 크게 `데이터 타입에 따른 구분`과 `선언 위치에 따른 구분`으로 2가지 기준에 따라 분류된다
