--- a/_posts/develop/ds_ai/2025-03-19-al01-2.md
+++ b/_posts/develop/ds_ai/2025-03-19-al01-2.md
@@ -1,5 +1,5 @@
 ---
-title: "알고리즘과 알고리즘 분석"
+title: "[알고리즘] 알고리즘과 알고리즘 분석"
 excerpt: "알고리즘, 효율적인 알고리즘 분석이 필요한 이유"
 categories:
   - ds_ai
@@ -10,6 +10,12 @@ sidebar:
    nav: "docs"
 ---
 
+학교에서 알고리즘에 대해 배고 있는데 생각한 것과는 다르게 개념 위주의 수업이어서    
+블로그에 정리를 하고 코드로 실습하는 건 개인적으로 하기로 했다
+수업내용을 내가 이해하기 쉽게 재구성해보았다! 
+
+
+
 # **알고리즘 관련 용어정리**
 ---
 
@@ -17,25 +23,24 @@ sidebar:
 
 
 |용어|설명|
-|:---:|:---:|
+|:---:|---|
 |`문제(Problem)`|• 컴퓨터: 개별적인 모듈로 구성 <br> • 모듈: 컴퓨터가 이해할 수 있는 방식으로 특정한 작업을 해결 <br> • **문제: 개별 모듈이 수행하는 특정한 작업**|
-|`매개변수(Parameters)`|문제 포함된 특정한 `값이 정해지지 않은 변수`|
+|`매개변수(Parameters)`|문제에 포함된 특정한 `값이 정해지지 않은 변수`|
 |`인스턴스(Instance)`|• 문제의 매개변수에 값이 할당될 때 마다 생성되는 것 <br> • 문제의 인스턴스: 특정한 매개변수 값이 할당된 문제|
 |`해결방법(Solution)`|해당 인스턴스에서 주어진 `질문에 대한 답`|
-|`알고리즘(Algorithm)`|컴퓨터가 문제의 모든 인스턴스를 해결할 수 있도록 하기위해 각 인스턴스에 대한 해결 방법을 명확한 단계별 절차(step-by-step procedure) |
+|`알고리즘(Algorithm)`|컴퓨터가 문제의 모든 인스턴스를 해결할 수 있도록 하기위해 각 인스턴스에 대한 해결 방법을 명확한 단계별 절차(step-by-step procedure)로 표현한 것 |
 |`의사코드(Pseudocode)`|`알고리즘을 사람이 이해하기 쉽게 표현`한 것으로, 특정 프로그래밍 언어의 문법을 따르지 않고 자연어와 유사한 형식으로 작성된 코드|
 
 <br>
 
 **[ 예제 1 ]**
-> 알고리즘: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
+> `알고리즘`: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
+> • `매개변수`: 리스트 S, 리스트의 크기 n
+> • `인스턴스`: S=[10,7,11,5,13,8], n=6
+> • `Solution`: 5,7,8,10,11,13
 
+`참고` 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움<br>
 
-• Solution: 5,7,8,10,11,13
-• 매개변수: 리스트 S, 리스트의 크기 n
-• 인스턴스: S=[10,7,11,5,13,8], n=6
-
-`참고` 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움
 `참고` 비내림차순(nondecreasing order): 같은 숫자가 리스트에 여러 번 나타날 가능성을 고려하기 위해서
 <br>
 
@@ -44,16 +49,16 @@ sidebar:
 > 알고리즘: 리스트 S에 있는 n개의 숫자 중에서 숫자 x가 존재하는지 판단하라
 만약 x가 리스트 S에 포함되어 있다면 "yes"를 반환하고, 그렇지 않다면 "no"를 반환하라
 
-• 매개변수: S, n, x가 존재한다 (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
+• 매개변수: S, n, x (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
 • 인스턴스: S=[10,7,11,5,13,8], n=6, x=5
 • Solution:"yes, x는 S 안에 있다."
 
 <br>
 
-**`참고` 서술적 알고리즘(Descriptive Algorithm)의 문제점**
-• 복잡한 알고리즘을 이러한 방식으로 작성하는 것은 어렵고, 작성하더라도 사람이 이를 이해하는 것이 쉽지 않다
-• 영어 문장으로 표현된 알고리즘을 컴퓨터 언어로 변환하는 방법이 명확하지 않다
-• 즉, 자연어 기반의 알고리즘 설명은 비효율적일 수 있으며, 이를 보다 명확하고 체계적으로 정리할 필요가 있다
+**`참고` 서술적 알고리즘(Descriptive Algorithm)의 문제점**      
+• 복잡한 알고리즘을 이러한 방식으로 작성하는 것은 어렵고, 작성하더라도 사람이 이를 이해하는 것이 쉽지 않다     
+• 영어 문장으로 표현된 알고리즘을 컴퓨터 언어로 변환하는 방법이 명확하지 않다     
+• 즉, 자연어 기반의 알고리즘 설명은 비효율적일 수 있으며, 이를 보다 명확하고 체계적으로 정리할 필요가 있다     
 
 <br>
 <br>
