--- a/_posts/develop/ds_ai/2025-03-19-al01-2.md
+++ b/_posts/develop/ds_ai/2025-03-19-al01-2.md
@@ -4,16 +4,15 @@ excerpt: "알고리즘, 효율적인 알고리즘 분석이 필요한 이유"
 categories:
   - ds_ai
 tags: [알고리즘]
+use_math: true
 toc: true
 author_profile: true 
 sidebar:
    nav: "docs"
 ---
 
-학교에서 알고리즘에 대해 배고 있는데 생각한 것과는 다르게 개념 위주의 수업이어서    
-블로그에 정리를 하고 코드로 실습하는 건 개인적으로 하기로 했다
-수업내용을 내가 이해하기 쉽게 재구성해보았다! 
 
+<br>
 
 
 # **알고리즘 관련 용어정리**
@@ -34,9 +33,9 @@ sidebar:
 <br>
 
 **[ 예제 1 ]**
-> `알고리즘`: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라
-> • `매개변수`: 리스트 S, 리스트의 크기 n
-> • `인스턴스`: S=[10,7,11,5,13,8], n=6
+> `알고리즘`: 리스트 S에 포함된 n개의 숫자를 비내림차순(nondecreasing order)으로 정렬하라 <br>        
+> • `매개변수`: 리스트 S, 리스트의 크기 n<br>
+> • `인스턴스`: S=[10,7,11,5,13,8], n=6<br>
 > • `Solution`: 5,7,8,10,11,13
 
 `참고` 리스트 S를 살펴보고 직관적으로 정렬된 순서를 떠올릴 수 있으나, 이는 우리의 인지적 사고 과정에서 발생하는 것이며, 명확한 단계별 절차로 설명하기 어려움<br>
@@ -47,11 +46,10 @@ sidebar:
 **[ 예제 2 ]**
 
 > 알고리즘: 리스트 S에 있는 n개의 숫자 중에서 숫자 x가 존재하는지 판단하라
-만약 x가 리스트 S에 포함되어 있다면 "yes"를 반환하고, 그렇지 않다면 "no"를 반환하라
-
-• 매개변수: S, n, x (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)
-• 인스턴스: S=[10,7,11,5,13,8], n=6, x=5
-• Solution:"yes, x는 S 안에 있다."
+만약 x가 리스트 S에 포함되어 있다면 "yes"를 반환하고, 그렇지 않다면 "no"를 반환하라<br>
+> • 매개변수: S, n, x (n을 매개변수로 포함할 필요는 없지만, n을 포함하면 문제를 설명하는 데 더 편리)<br>
+> • 인스턴스: S=[10,7,11,5,13,8], n=6, x=5<br>
+> • Solution:"yes, x는 S 안에 있다."
 
 <br>
 
@@ -74,10 +72,10 @@ sidebar:
 <br>
 
 ## **의사코드와 C/C++ 코드의 차이점**
-• 2차원 가변 길이 배열을 함수의 매개변수로 허용
-• 지역(local)에서 가변 길이 배열을 선언 가능
-• 함수명 앞에 데이터 타입을 명시하지 않아도 됨
-• C++ 코드보다 수학적 표현과 영어와 유사한 표현을 더 많이 사용 가능
+• 2차원 가변 길이 배열을 함수의 매개변수로 허용<br>
+• 지역(local)에서 가변 길이 배열을 선언 가능<br>
+• 함수명 앞에 데이터 타입을 명시하지 않아도 됨<br>
+• C++ 코드보다 수학적 표현과 영어와 유사한 표현을 더 많이 사용 가능<br>
 > 예: `exchange x and y;` (의사코드) → `temp = x; x = y; y = temp;` (C++ 코드) 
 
 • 일반적인 C++ 데이터 타입 이외에도 추가적인 데이터 타입을 사용 가능
@@ -168,7 +166,7 @@ void matrixmult (int n, const number A[][], const number B[][], number C[][])
 
 # **효율적인 알고리즘 분석의 중요성**
 ---
-비효율적인 알고리즘 분석을 통해 효율적인 알고리즘 분석의 중요성을 알아보도록 한다!
+비효율적인 알고리즘 분석을 통해 효율적인 알고리즘 분석의 중요성을 알아보도록 한다!<br>
 이 글에서는 순차탐색과 이진탐색, 피보나치 수열을 사용한다
 
 <br>
@@ -210,9 +208,9 @@ void binsearch (int n,
 ```
 
 > **while 루프에서 두 번 비교하는가, 한 번 비교하는가?**  
-• while 루프에서 x와 S[mid]를 비교하는 과정이 **각 반복마다 두 번 발생**한다(단, x를 찾은 경우 제외) 
-• 그러나 효율적인 어셈블리 언어(assembler) 구현에서는 **한 번만 비교하도록 최적화할 수 있음**
-• 즉, S[mid]와의 비교 결과를 조건 코드(condition code)에 설정하고, 이를 기반으로 분기(branch)를 수행할 수 있음
+• while 루프에서 x와 S[mid]를 비교하는 과정이 **각 반복마다 두 번 발생**한다(단, x를 찾은 경우 제외) <br>
+• 그러나 효율적인 어셈블리 언어(assembler) 구현에서는 **한 번만 비교하도록 최적화할 수 있음**<br>
+• 즉, S[mid]와의 비교 결과를 조건 코드(condition code)에 설정하고, 이를 기반으로 분기(branch)를 수행할 수 있음<br>
 • 이를 통해 while 루프 내에서 **한 번만 비교하는 방식으로 동작할 수 있음**
 
 <br>
@@ -226,12 +224,12 @@ void binsearch (int n,
 |**1,048,576**|1,048,576|21|
 |**4,294,967,296**|4,294,967,296|33|
 
-> **순차 탐색(Sequential Search)**
-• 입력 크기 n이 증가할수록 비교 횟수가 **선형적(O(n))**으로 증가
+> **순차 탐색(Sequential Search)**<br>
+• 입력 크기 n이 증가할수록 비교 횟수가 **선형적(O(n))**으로 증가<br>
 • 4,294,967,296개의 요소가 있을 때, 4,294,967,296번 비교
 
-> **이진 탐색(Binary Search)**
-• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임(매 반복마다 탐색 범위가 절반으로 줄어들기 때문)
+> **이진 탐색(Binary Search)**<br>
+• 비교 횟수가 **로그(log₂(n))** 형태로 증가하여 매우 효율적임(매 반복마다 탐색 범위가 절반으로 줄어들기 때문)<br>
 • 4,294,967,296개의 요소가 있을 때, 단 33번의 비교
 
 
@@ -239,14 +237,14 @@ void binsearch (int n,
 <br>
 <br>
 
-## **💡 피보나치 수열(The Fibonacci Sequence)**
+## **피보나치 수열(The Fibonacci Sequence)**
 **[ 피보나치 수열의 정의 ]**
 
-```
+$$
 f0 = 0
 f1 = 1
 fn = fn-1 + fn-2 (for n >= 2)
-```
+$$
 
 <br>
 
@@ -278,7 +276,6 @@ int fib (int n)     // 재귀적 방식
     else
         return fib(n-1) + fib(n-2);
 }
-
 ```
 
 <br>
