--- a/_posts/develop/ds_ai/2025-03-19-al01-2.md
+++ b/_posts/develop/ds_ai/2025-03-19-al01-2.md
@@ -240,11 +240,7 @@ void binsearch (int n,
 ## **피보나치 수열(The Fibonacci Sequence)**
 **[ 피보나치 수열의 정의 ]**
 
-$$
-f0 = 0
-f1 = 1
-fn = fn-1 + fn-2 (for n >= 2)
-$$
+$f0 = 0, f1 = 1, fn = fn-1 + fn-2 (for n >= 2)$
 
 <br>
 
