--- a/_posts/develop/ds_ai/2025-03-19-al01-2.md
+++ b/_posts/develop/ds_ai/2025-03-19-al01-2.md
@@ -76,7 +76,14 @@ sidebar:
 • 지역(local)에서 가변 길이 배열을 선언 가능<br>
 • 함수명 앞에 데이터 타입을 명시하지 않아도 됨<br>
 • C++ 코드보다 수학적 표현과 영어와 유사한 표현을 더 많이 사용 가능<br>
-> 예: `exchange x and y;` (의사코드) → `temp = x; x = y; y = temp;` (C++ 코드) 
+• 비표준 제어 구조, 논리연산자, 관계연산자를 사용할 수 있음
+
+| 논리 연산자 (Operator) | C++ 기호 (C++ symbol) |비교 연산자 (Comparison) | C++ 코드 (C++ code) |
+|------------------|--------------------|------------------------|------------------|
+| **and** | `&&` |`x = y` | `x == y` |
+| **or**  | `||` |`x ≠ y` | `x != y` |
+| **not** | `!` |`x ≤ y` | `x <= y` |
+|||`x ≥ y` | `x >= y` |
 
 • 일반적인 C++ 데이터 타입 이외에도 추가적인 데이터 타입을 사용 가능
 
@@ -86,23 +93,29 @@ sidebar:
 | **bool**   | `true` 또는 `false` 값을 가지는 변수 |
 | **number** | 정수(`int`) 또는 실수(`float`)로 정의될 수 있는 변수 |
 
-• 비표준 제어 구조(Nonstandard Control Structure)를 사용할 수 있음
-> `repeat (n times) { ... }`
 
-• 비표준 논리 연산자 및 특정 관계 연산자를 사용할 수 있음
+```c
+// 수학적 표현과 영어와 유사한 표현을 더 많이 사용가능
+temp = x; x = y; y = temp;  // c++
+exchange x and y;           // 의사코드
 
-| 연산자 (Operator) | C++ 기호 (C++ symbol) |
-|------------------|--------------------|
-| **and** | `&&` |
-| **or**  | `||` |
-| **not** | `!` |
+// 2차원 가변 길이 배열을 함수의 매개변수로 허용
+void func(int arr[][5]);    // c++, 두 번째 차원은 반드시 명시되어야 함
+function func(arr[][]):     // 의사코드
 
-| 비교 연산자 (Comparison) | C++ 코드 (C++ code) |
-|------------------------|------------------|
-| `x = y` | `x == y` |
-| `x ≠ y` | `x != y` |
-| `x ≤ y` | `x <= y` |
-| `x ≥ y` | `x >= y` |
+// 지역(local)에서 가변 길이 배열을 선언 가능
+void example(int n) {       // c++, 가변길이 배열을 사용하려면 동적 할당, 해제!
+    int* arr = new int[n];  // 동적 배열 생성
+    ...
+    delete[] arr;  // 메모리 해제 필수!
+}
+void example(int n) {       // 의사코드, (C99에서는 허용)
+    int arr[n];  
+}
+````
+
+
+
 
 <br>
 <br>
@@ -125,7 +138,7 @@ void squential(int n,
                 index& location)
 {
     location = 1;
-    while (location <= n && S[location] !=x) {
+    while (location ≤ n && S[location] !=x) {
         location ++;
     }
     if(location > n)
@@ -171,7 +184,7 @@ void matrixmult (int n, const number A[][], const number B[][], number C[][])
 
 <br>
 
-## **💡 순차 탐색(Sequential Search) vs 이진 탐색(Binary Search)**  
+## **순차 탐색(Sequential Search) vs 이진 탐색(Binary Search)**  
 **[ 이진 탐색(Binary Search) ]**
 
 ```c
@@ -248,18 +261,18 @@ fn = fn-1 + fn-2 (for n >= 2) <br>
 
 <br>
 
-**[ 재귀적 방식 VS 반복적 방식 ]**
+## **재귀적 방식 VS 반복적 방식**
 
-**(1) 재귀적 방식의 피보나치 수열**
+**[ 재귀적 방식의 피보나치 수열 ]**
 
-```c
-// 처음 몇 개 항 계산
-f2 = f1 + f0 = 1 + 0 = 1
-f3 = f2 + f1 = 1 + 1 = 2
-f4 = f3 + f2 = 2 + 1 = 3
-f5 = f4 + f3 = 3 + 2 = 5
+$$
+처음 몇 개 항 계산
+f2 = f1 + f0 = 1 + 0 = 1      
+f3 = f2 + f1 = 1 + 1 = 2      
+f4 = f3 + f2 = 2 + 1 = 3      
+f5 = f4 + f3 = 3 + 2 = 5      
 ...
-```
+$$
 
 ```c
 /*
@@ -280,7 +293,7 @@ int fib (int n)     // 재귀적 방식
 
 <br>
 
-**(2) 재귀적 방식의 비효율성 증명**
+**[ 재귀적 방식의 비효율성 증명 ]**
 
 |n|0|1|2|3|4|5|6|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -304,18 +317,17 @@ int fib (int n)     // 재귀적 방식
                        fib(0)  fib(1)
 ```
 
-```
+$$
 T(n) > 2 * T(n-2)
      > 2 * 2 * T(n-4)
      > 2 * 2 * 2 * T(n-6)
      ...
      > 2 * 2 * 2 * ... * T(0)
-```
+$$
 
 <br>
 
 **[ 반복적 방식의 피보나치 수열 ]**
-
 **> 피보나치 수열의 n번째 항을 계산하는 알고리즘(반복적 방식)**  
 
 ```c
@@ -340,28 +352,21 @@ int fib2 (int n)    // 반복적 방식
 
     return f[n];
 }
-
 ```
 
 **(1) 정리 (Theorem)**  
-> 만약 `T(n)`이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, `n >= 2` 일 때 `T(n) > 2^{n/2}` 이 성립한다
+> 만약 $T(n)$이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, $n ≥ 2$ 일 때 $T(n) > 2^{n/2}$ 이 성립한다
 
 
 <br>
 
 **(2) 증명 (Proof)**  
-**귀납법 기초(Base Case)**  
-• 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 
-• `n = 2` 및 `n = 3`에 대한 값: `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`
 
-**귀납 가설(Induction Hypothesis)**  
-• 귀납 가설을 세우는 한 가지 방법은 `m < n`인 모든 `m`에 대해 명제가 성립한다고 가정하는 것**
-• 그런 다음, 귀납 단계에서 **이 가정이 `n`에 대해서도 성립함을 보이면 됨** 
-• 이 기법이 증명에 사용됨. 즉, `2 ≤ m < n` 인 모든 `m`에 대해: `T(m) > 2^{m/2}`
-
-**귀납 단계(Induction Step)**  
-• `T(n) > 2^{n/2}`임을 보여야 함
-• `T(n)`은 `T(n-1)`과 `T(n-2)`의 합, 루트 노드 1개로 구성됨
+|단계|내용|
+|:---:|---|
+|**귀납법 기초(Base Case)**|• 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 <br>• `n = 2` 및 `n = 3`에 대한 값: `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`|
+|**귀납 가설(Induction Hypothesis)** |• 귀납 가설을 세우는 한 가지 방법은 `m < n`인 모든 `m`에 대해 명제가 성립한다고 가정하는 것**<br>• 그런 다음, 귀납 단계에서 **이 가정이 `n`에 대해서도 성립함을 보이면 됨** <br>• 이 기법이 증명에 사용됨. 즉, `2 ≤ m < n` 인 모든 `m`에 대해: `T(m) > 2^{m/2}`|
+|**귀납 단계(Induction Step)**|• `T(n) > 2^{n/2}`임을 보여야 함<br>• `T(n)`은 `T(n-1)`과 `T(n-2)`의 합, 루트 노드 1개로 구성됨|
 
 ```
 T(n) = T(n-1) + T(n-2) + 1
@@ -381,9 +386,9 @@ T(n) = T(n-1) + T(n-2) + 1
 <br>
 
 **[ 결론 ]**  
-- **반복적 방식(Iterative Approach)**은 **선형 시간 `O(n)`** 으로 수행됨.  
-- **재귀적 방식(Recursive Approach)**은 **지수 시간 `O(2^n)`** 으로 매우 비효율적.  
-- **반복적 방식이 훨씬 빠르며, 큰 $n $에서 실행 시간이 엄청난 차이를 보임**.
+**• 반복적 방식(Iterative Approach)**은 **선형 시간 `O(n)`** 으로 수행됨.  
+**• 재귀적 방식(Recursive Approach)**은 **지수 시간 `O(2^n)`** 으로 매우 비효율적.  
+**• 반복적 방식이 훨씬 빠르며, 큰 $n$에서 실행 시간이 엄청난 차이를 보임**.
 
 
 
