--- a/_posts/develop/ds_ai/2025-03-19-al01-2.md
+++ b/_posts/develop/ds_ai/2025-03-19-al01-2.md
@@ -265,14 +265,15 @@ fn = fn-1 + fn-2 (for n >= 2) <br>
 
 **[ 재귀적 방식의 피보나치 수열 ]**
 
-$$
+
+```
 처음 몇 개 항 계산
 f2 = f1 + f0 = 1 + 0 = 1      
 f3 = f2 + f1 = 1 + 1 = 2      
 f4 = f3 + f2 = 2 + 1 = 3      
 f5 = f4 + f3 = 3 + 2 = 5      
 ...
-$$
+```
 
 ```c
 /*
@@ -328,6 +329,7 @@ $$
 <br>
 
 **[ 반복적 방식의 피보나치 수열 ]**
+
 **> 피보나치 수열의 n번째 항을 계산하는 알고리즘(반복적 방식)**  
 
 ```c
@@ -355,7 +357,8 @@ int fib2 (int n)    // 반복적 방식
 ```
 
 **(1) 정리 (Theorem)**  
-> 만약 $T(n)$이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, $n ≥ 2$ 일 때 $T(n) > 2^{n/2}$ 이 성립한다
+> 만약 $T(n)$이 피보나치 알고리즘의 재귀 트리에서 계산되는 항의 개수라면, <br>
+$n ≥ 2$ 일 때 $T(n) > 2^{n/2}$ 이 성립한다
 
 
 <br>
@@ -364,7 +367,7 @@ int fib2 (int n)    // 반복적 방식
 
 |단계|내용|
 |:---:|---|
-|**귀납법 기초(Base Case)**|• 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 <br>• `n = 2` 및 `n = 3`에 대한 값: `T(2) = 3 > 2^{2/2}`, `T(3) = 5 > 2^{3/2}`|
+|**귀납법 기초(Base Case)**|• 귀납법을 적용하기 위해 **두 개의 기초 사례**가 필요 <br>• $n = 2$ 및 $n = 3$에 대한 값: <br>$T(2) = 3 > 2^{2/2}$, $T(3) = 5 > 2^{3/2}$|
 |**귀납 가설(Induction Hypothesis)** |• 귀납 가설을 세우는 한 가지 방법은 `m < n`인 모든 `m`에 대해 명제가 성립한다고 가정하는 것**<br>• 그런 다음, 귀납 단계에서 **이 가정이 `n`에 대해서도 성립함을 보이면 됨** <br>• 이 기법이 증명에 사용됨. 즉, `2 ≤ m < n` 인 모든 `m`에 대해: `T(m) > 2^{m/2}`|
 |**귀납 단계(Induction Step)**|• `T(n) > 2^{n/2}`임을 보여야 함<br>• `T(n)`은 `T(n-1)`과 `T(n-2)`의 합, 루트 노드 1개로 구성됨|
 
@@ -378,9 +381,9 @@ T(n) = T(n-1) + T(n-2) + 1
 
 **[ 반복적 방식 vs. 재귀적 방식의 실행 시간 비교 ]**  
 
-• 반복문을 활용하면 배열 `$`를 사용하지 않고도 알고리즘을 작성할 수 있음
-• 이전 두 개의 항만 필요하기 때문에, 배열 없이 구현 가능
-• `fib2(n)`을 구하기 위해, 반복적 알고리즘은 첫 `n+1`개의 항을 한 번씩만 계산 > 즉, 총 `n+1`개의 계산이 필요
+• 반복문을 활용하면 배열을 사용하지 않고도 알고리즘을 작성할 수 있음<br>
+• 이전 두 개의 항만 필요하기 때문에, 배열 없이 구현 가능<br>
+• `fib2(n)`을 구하기 위해, 반복적 알고리즘은 첫 `n+1`개의 항을 한 번씩만 계산 > 즉, 총 `n+1`개의 계산이 필요<br>
 • 가정: 한 항의 계산 시간이 **1ns**라고 가정
 
 <br>
