--- a/_posts/develop/ds_ai/2025-03-21-al03.md
+++ b/_posts/develop/ds_ai/2025-03-21-al03.md
@@ -25,14 +25,13 @@ sidebar:
 <br>
 
 **[ 복잡도 분석을 위해서 ]**
-• 1단계: **입력 크기 결정하기**
 
+• 1단계: **입력 크기 결정하기**<br>
 • 2단계: **기본 연산 선택하기**
 
 **(1) 입력크기(input size) 결정하기**<br>
 • 대부분의 알고리즘에서는 입력 크기를 정의할 수 있는 합리적인 방법을 찾을 수 있음<br>
 • 입력 크기 ≠ 입력의 크기 자체<br>
-
 `참고` <br>
 이진 표현(binary representation)을 사용할 경우, 입력 n을 인코딩하는 데 필요한 비트 수는 lg(n)+1<br>
 예를 들어, n=13일 경우, 이진수 표현은 1101이며, 입력 크기 = 4비트
@@ -76,7 +75,7 @@ sidebar:
 |`B(n)`|Best-Case Time Complexity|최선의 경우 시간 복잡도, 알고리즘이 가장 효율적일 때<br>입력 크기가 n일 때 모든 가능한 입력에 대해 알고리즘이 기본 연산을 수행하는 최소 횟수|
 
 
-`참고: 용법 2인 경우에만` 
+`참고: 용법 2인 경우에만` <br>
 • T(n)에 W(n), A(n), B(n)이 포함<br>
 • A(n) = T(n), B(n) = T(n), W(n) = T(n)
 
@@ -86,16 +85,14 @@ sidebar:
 
 ## **[ Every-Case Time Complexity 예제]**
 
-**배열 요소 더하기(Add Array Members)**
+**배열 요소 더하기(Add Array Members)**<br>
 • 기본 연산: 배열의 각 항목을 합(sum)에 추가하는 연산<br>
 • 입력 크기: n (배열 내 항목의 개수)<br>
 • 배열 내 숫자의 값과 관계없이, for 루프를 n번 반복<br>
 • 기본 연산: 항상 n번 수행<br>
 • 시간 복잡도: `T(n)=n`<br>
 
-<br>
-
-**교환 정렬(Exchange Sort)**
+**교환 정렬(Exchange Sort)**<br>
 • 기본 연산: S[j]와 S[i] 비교 (비교연산과 할당연산 고려가능, 여기서는 비교연산)<br>
 • 입력 크기: n (정렬할 항목의 개수)<br>
 `for 루프의 반복 횟수 분석`<br>
@@ -105,8 +102,6 @@ sidebar:
 따라서, for-j 루프의 총 실행 횟수는 다음과 같이 계산됨: `T(n)=(n−1)+(n−2)+(n−3)+⋯+1` => `T(n)=(n−1)⋅n/2`(등차수열의 합 공식)<br>
 • 시간 복잡도: `T(n^2)`
 
-<br>
-
 **행렬 곱셈(Matrix Multiplication)**
 • 기본 연산: 가장 안쪽 for 루프에서 곱셈 연산 수행<br>
 • 입력 크기: n, 행과 열의 개수<br>
@@ -114,19 +109,15 @@ sidebar:
 • 시간복잡도: `T(n)=n×n×n=n^3`<br>
  
 <br>
-<br>
 
-
-**[ 순차탐색(Sequential Search)으로 최선, 최악, 평균 시간 복잡도 알아보기 ]**
-**순차탐색(Sequential Search) 예제**
+**[ 순차탐색(Sequential Search)으로 최선, 최악, 평균 시간 복잡도 알아보기 ]**<br>
+**순차탐색(Sequential Search) 예제**<br>
 • 기본 연산: 배열 내 요소를 x와 비교<br>
 • 입력 크기: n, 배열 내 요소 개수<br>
 
 
-<br>
-
 |시간복잡도|설명|
-|:---:|:---:|
+|:---:|---|
 |`W(n) = n`|x가 배열의 마지막 요소이거나 배열 내 존재하지 않는 경우로 기본 연산이 최대 n번 실행|
 |`B(n) = 1`|x가 첫 번째 요소일 경우 한 번만 실행됨|
 |`A(n)`|• x가 배열 내 존재한다고 가정하면, 배열 내 모든 위치에 있을 확률이 동일함<br>• x가 k번째 슬롯에 위치할 확률은 1/n, x를 찾기 위해 기본 연산이 k번 실행됨<br>• 시간 복잡도: A(n)= ∑ (k × 1/n) = 1/n x ∑k = (n+1)/2|
