--- a/_posts/develop/ds_ai/2025-03-21-al03.md
+++ b/_posts/develop/ds_ai/2025-03-21-al03.md
@@ -96,7 +96,8 @@ sidebar:
 > 외부 루프(for-i 루프)는 n−1번 반복<br>
 내부 루프(for-j 루프)는 첫 번째 반복에서 n−1번 실행<br>
 두 번째 반복에서 n−2번 실행,…, 마지막 반복에서는 1번 실행<br>
-따라서, for-j 루프의 총 실행 횟수는 다음과 같이 계산됨: `T(n)=(n−1)+(n−2)+(n−3)+⋯+1` => `T(n)=(n−1)⋅n/2`(등차수열의 합 공식)<br>
+• for-j 루프의 총 실행 횟수는 다음과 같이 계산됨: <br>
+`T(n)=(n−1)+(n−2)+(n−3)+⋯+1` => `T(n)=(n−1)⋅n/2`(등차수열의 합 공식)<br>
 • 시간 복잡도: `T(n^2)`
 
 **행렬 곱셈(Matrix Multiplication)**
