--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -3,6 +3,7 @@ title: "[알고리즘] 알고리즘의 차수"
 categories:
   - ds_ai
 tags: [알고리즘]
+use_math: true
 toc: true
 author_profile: true 
 sidebar:
@@ -10,40 +11,8 @@ sidebar:
 ---
 
 
-☑ 개요 (Overview)
-◯ 선형 시간 알고리즘 (Linear-time algorithm)
-➤ 예: 
-$n, 100n$
-➤ 시간 복잡도가 입력 크기 
-𝑛
-n에 대해 선형적입니다.
-
-◯ 이차 시간 알고리즘 (Quadratic-time algorithm)
-➤ 예: 
-𝑛
-2
-n 
-2
- , 
-0.01
-𝑛
-2
-0.01n 
-2
- 
-➤ 시간 복잡도가 입력 크기 
-n에 대해 이차적입니다.
-
-◯ 선형 시간 알고리즘이 이차 시간 알고리즘보다 낫다
-➤ 어떤 선형 시간 알고리즘도 결국에는 어떤 이차 시간 알고리즘보다 효율적입니다.
-➤ 이론적으로 알고리즘을 분석할 때는, 우리는 결국의 동작(eventual behavior)에 관심을 둡니다.
-➤ 다음으로, 알고리즘을 결국의 동작에 따라 어떻게 분류할 수 있는지를 보여줄 것입니다.
-➤ 이렇게 하면 한 알고리즘의 결국의 동작이 다른 알고리즘보다 나은지를 쉽게 판단할 수 있습니다.
-
-
-좋습니다! 올려주신 3장의 슬라이드를 자연스럽게 한국어로 번역해드릴게요 😊
-
----
+<br>
+<br>
 
 ### ✅ 직관적인 순서 개념 소개 (An Intuitive Introduction to Order)
 
@@ -60,7 +29,7 @@ n에 대해 이차적입니다.
 - **이차항을 제외한 다른 항들의 값은 결국 이차항에 비해 무시할 수 있을 정도로 작아진다**  
   → 아래 표에서 확인 가능
 
-| \( n \) | \( 0.1n^2 \) | \( 0.1n^2 + n + 100 \) |
+| $n$ | \( 0.1n^2 \) | \( 0.1n^2 + n + 100 \) |
 |--------|--------------|------------------------|
 | 10     | 10           | 120                    |
 | 20     | 40           | 160                    |
