--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -63,100 +63,80 @@ sidebar:
 <br>
 <br>
 
-# 점근표기법
-> 점근 표기법은 알고리즘이 입력 크기 n에 따라 어떻게 성능이 변하는지를 표현하는 방법<br>
-• Big O 표기법 (Big O Notation)<br>
-• 
-물론이죠! 주어진 내용을 전체는 그대로 두고, **논리 흐름에 맞춰 문장 순서만 재배열**하여 더 자연스럽고 이해하기 쉽게 구성해드릴게요.
-
+# 점근표기법(Asymptotic Notation)
+> 알고리즘이 입력 크기 n에 따라 어떻게 성능이 변하는지를 표현하는 방법<br>
+함수의 "성장 속도"를 기준으로 알고리즘의 효율을 비교할 수 있게 해줌<br>
+• Big-O 표기법 (O)<br>
+• Omega 표기법 (Ω)<br>
+• Theta 표기법 (Θ)<br>
 ---
 
-# 📊 점근 표기법 (Asymptotic Notation)
+## Big-O 표기법 (O)
+**[ 정의 ]**
+> 함수 $g(n) \in O(f(n))$란,  
+> 양의 실수 상수 $c$와 정수 $N \geq 0$가 존재하여  
+> 모든 $n \geq N$에 대해 $g(n) \leq c \cdot f(n)$
 
-점근 표기법은 알고리즘이 입력 크기 \( n \)에 따라 어떻게 성능이 변하는지를 표현하는 방법입니다.  
-함수의 "성장 속도"를 기준으로 알고리즘의 효율을 비교할 수 있게 해줍니다.
+• 즉, $g(n)$은 결국 $c \cdot f(n)$보다 **느리지 않다**<br>
+• 처음에는 $g(n)$이 커 보일 수 있지만, 충분히 큰 n부터는 항상 $c \cdot f(n)$ 아래에 있게 됨
 
----
+📌 **Big-O는 최악의 경우 시간 복잡도를 표현**하며, 상한(upper bound)을 의미
 
-## ✅ 1. Big-O 표기법 (O)
+<br>
 
-### ◯ 정의
+**[ 예제들 ]**
+> $g(n) = n^2 + 10n$은 $O(n^2)$<br>
+• 왜냐하면 \( n \geq 1 \)일 때 \( n^2 + 10n \leq 11n^2 \)<br>
+• ⇒ \( c = 11, N = 1 \)
 
-> 함수 \( g(n) \in O(f(n)) \)란,  
-> 양의 실수 상수 \( c \)와 정수 \( N \geq 0 \)가 존재하여  
-> 모든 \( n \geq N \)에 대해  
-> \[
-g(n) \leq c \cdot f(n)
-\]
+> $5n^2 \in O(n^2)$<br>
+• $5n^2 \leq 5n^2$, ⇒ $c = 5, N = 0$
 
-- 즉, \( g(n) \)은 결국 \( c \cdot f(n) \)보다 **느리지 않다**는 뜻입니다.
-- 처음에는 g(n)이 커 보일 수 있지만, 충분히 큰 n부터는 항상 \( c \cdot f(n) \) 아래에 있게 됩니다.
+> 교환 정렬 (Exchange Sort)  <br>
+• $T(n) = \frac{n(n-1)}{2} \leq \frac{n^2}{2} \Rightarrow T(n) \in O(n^2)$
 
-📌 **Big-O는 최악의 경우 시간 복잡도를 표현**하며, 상한(upper bound)을 의미합니다.
-
----
-
-### ◯ 예제들
-
-- \( g(n) = n^2 + 10n \)은 \( O(n^2) \)
-  - 왜냐하면 \( n \geq 1 \)일 때 \( n^2 + 10n \leq 11n^2 \)
-  - ⇒ \( c = 11, N = 1 \)
-
-- \( 5n^2 \in O(n^2) \)
-  - \( 5n^2 \leq 5n^2 \), ⇒ \( c = 5, N = 0 \)
-
-- 교환 정렬 (Exchange Sort)  
-  \[
-  T(n) = \frac{n(n-1)}{2} \leq \frac{n^2}{2} \Rightarrow T(n) \in O(n^2)
-  \]
-
-- 반례: \( n^2 \in O(n^2 + 10n) \)
-  - 가능함! \( n^2 \leq 1 \cdot (n^2 + 10n) \) (단순한 함수만 오는 게 아니라 복합 함수도 가능)
+> 반례: $n^2 \in O(n^2 + 10n)$ <br>
+• 가능함! $n^2 \leq 1 \cdot (n^2 + 10n)$ (단순한 함수만 오는 게 아니라 복합 함수도 가능)
 
 📈 시각적 설명:  
 초기에는 \( g(n) \)이 \( c \cdot f(n) \)보다 클 수 있지만,  
 일정 시점 이후에는 항상 작아지며 계속 그 아래에 머무름
 
----
+<br>
+<br>
 
-## ✅ 2. Omega 표기법 (Ω)
-
-### ◯ 정의
-
+## Omega 표기법 (Ω)
+**[ 정의 ]**
 > 함수 \( g(n) \in \Omega(f(n)) \)란,  
 > 양의 상수 \( c \), 정수 \( N \geq 0 \)가 존재해서  
-> 모든 \( n \geq N \)에 대해  
-> \[
-g(n) \geq c \cdot f(n)
-\]
+> 모든 \( n \geq N \)에 대해  $g(n) \geq c \cdot f(n)$
 
-📌 즉, \( g(n) \)은 결국 \( c \cdot f(n) \)보다 **빠르지 않다**, 혹은 **그 이상이다**  
+📌 즉, \( g(n) \)은 결국 \( c \cdot f(n) \)보다 **빠르지 않다**, 혹은 **그 이상이다**  <br>
 ⇒ **최선의 경우 시간 복잡도** 표현에 사용됨 (하한, lower bound)
 
----
+<br>
 
-### ◯ 예제들
+**예제**
 
-- \( n^2 + 10n \in \Omega(n^2) \)
-  - \( n^2 + 10n \geq n^2 \), ⇒ \( c = 1, N = 0 \)
+> \( n^2 + 10n \in \Omega(n^2) \)
+• \( n^2 + 10n \geq n^2 \), ⇒ \( c = 1, N = 0 \)
 
-- \( 5n^2 \in \Omega(n^2) \)
-  - ⇒ \( c = 1, N = 0 \)
+> \( 5n^2 \in \Omega(n^2) \)
+• ⇒ \( c = 1, N = 0 \)
 
-- 교환 정렬  
-  \[
-  T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}
-  \]
+> 교환 정렬  
+  $T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}$
 
-- \( n^3 \in \Omega(n^2) \)
-  - 당연히 포함됨 (차수가 더 크므로)
+> \( n^3 \in \Omega(n^2) \)
+• 당연히 포함됨 (차수가 더 크므로)
 
 📈 시각적 설명:  
 처음엔 작을 수 있지만, 결국 \( g(n) \)이 \( c \cdot f(n) \)보다 커져서 계속 위에 머물게 됨
 
----
+<br>
+<br>
 
-## ✅ 3. Theta 표기법 (Θ)
+## Theta 표기법 (Θ)
 
 ### ◯ 정의
 
@@ -175,16 +155,14 @@ c_1 f(n) \leq g(n) \leq c_2 f(n)
 
 📌 **정확한 차수의 복잡도 표현**, 즉 **평균적 수행 시간**에 사용됩니다
 
----
+<br>
 
-### ◯ 예시
+**예시**
 
-- 교환 정렬 알고리즘  
-  \[
-  T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)
-  \]
+> 교환 정렬 알고리즘  
+• $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$
 
-- \( 4n^2, 6n^2 + 9, 5n^2 + 2n \) 등도 \( \Theta(n^2) \)에 속함
+> \( 4n^2, 6n^2 + 9, 5n^2 + 2n \) 등도 \( \Theta(n^2) \)에 속함
 
 ---
 
@@ -237,7 +215,7 @@ n & \text{(짝수일 때)} \\
 
 ---
 
-## ✅ 요약 표
+## 요약 표
 
 | 표기 | 의미 | 성장률 비교 | 용도 |
 |------|------|--------------|------|
