--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -69,7 +69,8 @@ sidebar:
 • Big-O 표기법 (O)<br>
 • Omega 표기법 (Ω)<br>
 • Theta 표기법 (Θ)<br>
----
+소문자 o 표기법 (little-o)
+
 
 ## Big-O 표기법 (O)
 **[ 정의 ]**
@@ -138,22 +139,17 @@ sidebar:
 
 ## Theta 표기법 (Θ)
 
-### ◯ 정의
+**정의**
 
-> 함수 \( g(n) \in \Theta(f(n)) \)란,  
-> 상수 \( c_1, c_2 > 0 \), 정수 \( N \geq 0 \)가 존재하여  
-> 모든 \( n \geq N \)에 대해  
-\[
-c_1 f(n) \leq g(n) \leq c_2 f(n)
-\]
+> 함수 $g(n) \in \Theta(f(n))$란,  
+> 상수 $c_1, c_2 > 0$, 정수 $N \geq 0$가 존재하여  
+> 모든 $n \geq N$에 대해  $c_1 f(n) \leq g(n) \leq c_2 f(n)$
 
-- 즉, \( g(n) \)이 \( f(n) \)과 **성장률이 정확히 같은 수준**이라는 뜻
-- **O와 Ω를 동시에 만족**하면 Θ에 속함  
-\[
-\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))
-\]
+• 즉, $g(n)$이 $f(n)$과 **성장률이 정확히 같은 수준**이라는 뜻
+• **O와 Ω를 동시에 만족**하면 Θ에 속함  
+$\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 
-📌 **정확한 차수의 복잡도 표현**, 즉 **평균적 수행 시간**에 사용됩니다
+📌 **정확한 차수의 복잡도 표현**, 즉 **평균적 수행 시간**에 사용
 
 <br>
 
@@ -162,58 +158,41 @@ c_1 f(n) \leq g(n) \leq c_2 f(n)
 > 교환 정렬 알고리즘  
 • $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$
 
-> \( 4n^2, 6n^2 + 9, 5n^2 + 2n \) 등도 \( \Theta(n^2) \)에 속함
+> \(4n^2, 6n^2 + 9, 5n^2 + 2n\) 등도 \(\Theta(n^2)\)에 속함
 
----
+<br>
 
-## ✅ 4. 소문자 o 표기법 (little-o)
+## 소문자 o 표기법 (little-o)
+**정의**
+> 함수 \(g(n) \in o(f(n))\)란,  
+> **모든** 양의 실수 $c$에 대해 $n \geq N$에서 $g(n) \leq c \cdot f(n)$
 
-### ◯ 정의
+• Big-O보다 **더 강한 상한 조건**  
+• 어떤 작은 c라도 만족해야 하므로, **g(n)**은 **f(n)**보다 **훨씬 느린 성장률**을 가져야 함
 
-> 함수 \( g(n) \in o(f(n)) \)란,  
-> **모든** 양의 실수 \( c \)에 대해  
-> \( n \geq N \)에서  
-> \[
-g(n) \leq c \cdot f(n)
-\]
+**예시**
 
-- Big-O보다 **더 강한 상한 조건**  
-- 어떤 작은 c라도 만족해야 하므로,  
-  **g(n)**은 **f(n)**보다 **훨씬 느린 성장률**을 가져야 함
+> $n \in o(n^2)$  
+• $n \leq c \cdot n^2$ → 항상 성립 가능  
+• \(c = 0.00001\)일 때 \(N \geq 100000\)
 
----
-
-### ◯ 예시
-
-- \( n \in o(n^2) \)  
-  - \( n \leq c \cdot n^2 \) → 항상 성립 가능  
-  - \( c = 0.00001 \)일 때 \( N \geq 100000 \)
-
-- \( n \notin o(5n) \)  
-  - 어떤 c에 대해서도 \( n \leq c \cdot 5n \)이 항상 성립할 수 없음 (예: \( c = 1/6 \))
+> $n \notin o(5n)$ 
+• 어떤 c에 대해서도 $n \leq c \cdot 5n\4$ 이 항상 성립할 수 없음 (예: $c = 1/6$)
 
 - 성질 요약:  
 \[
 g(n) \in o(f(n)) \Rightarrow g(n) \in O(f(n)),\ g(n) \notin \Omega(f(n))
 \]
 
----
+**예시**
 
-### ◯ 특이한 함수 예시
+> $g(n) = \begin{cases}n & \text{(짝수일 때)} \\ 1 & \text{(홀수일 때)}\end{cases}$
 
-\[
-g(n) = 
-\begin{cases}
-n & \text{(짝수일 때)} \\
-1 & \text{(홀수일 때)}
-\end{cases}
-\]
+• 평균적으로 \( O(n) \)에 속함
+• 그러나 일정하게 크지 않기 때문에 \( \Omega(n) \)에 속하지 않음
+• ⇒ \( g(n) \in O(n) - \Omega(n) \), 하지만 \( o(n) \)에도 속하지 않음
 
-- 평균적으로 \( O(n) \)에 속함
-- 그러나 일정하게 크지 않기 때문에 \( \Omega(n) \)에 속하지 않음
-- ⇒ \( g(n) \in O(n) - \Omega(n) \), 하지만 \( o(n) \)에도 속하지 않음
-
----
+<ㅠ
 
 ## 요약 표
 
