--- a/_posts/develop/ds_ai/2025-03-22-al-4.md
+++ b/_posts/develop/ds_ai/2025-03-22-al-4.md
@@ -18,7 +18,7 @@ sidebar:
 ## 복잡도 분류 (Complexity categories)
 **[ 복잡도 분석 시 핵심 원칙 ]**  
 • **낮은 차수의 항은 무시할 수 있다**  
-• 예: \( 0.1n^2 + n + 100 \)에서 \( n \)과 상수항은 \( n^2 \)에 비해 무시 가능  
+• 예: $0.1n^2 + n + 100$에서 $n$과 상수항은 $n^2$에 비해 무시 가능  
   → 그래서 이 함수는 **Θ(n²)**로 분류됨
 
 
@@ -26,7 +26,7 @@ sidebar:
 • 순수 n차 함수: 다른 차수항 없이 해당 차수항만 포함 <br>
 • n차 시간 알고리즘: 다른 차수항이 있어 순수 n차 함수는 아니지만 n차 시간 알고리즘 으로 분류 가능 <br>
 
-| \(n\)  | \( 0.1n^2 \) | \( 0.1n^2 + n + 100 \) |
+| \(n\)  | $0.1n^2$ | $0.1n^2 + n + 100$ |
 |-------|--------------|------------------------|
 | 10    | 10           | 120                    |
 | 20    | 40           | 160                    |
@@ -39,24 +39,23 @@ sidebar:
 
 <br>
 
-## ✅ Θ 표기법과 차수 분류
+## Θ 표기법과 차수 분류
 
-• 어떤 함수 \( g(n) \)이 Θ(n²)에 속하면,  
+• 어떤 함수 $g(n)$이 Θ(n²)에 속하면,  
   → **“이차 시간 함수”**, 또는 **“Θ(n²) 알고리즘”**이라고 말함  
 
 •  **예시 알고리즘:**  
   교환 정렬 (exchange sort)  
-  \[
-  T(n) = \frac{n(n-1)}{2} = \frac{n^2}{2} - \frac{n}{2} \Rightarrow Θ(n^2)
-  \]
+  $T(n) = \frac{n(n-1)}{2} = \frac{n^2}{2} - \frac{n}{2} \Rightarrow Θ(n^2)$
 
 <br>
 
-## ✅ 대표적인 복잡도 분류 계층
+## 대표적인 복잡도 분류 계층
 
 • Θ(log n) < Θ(n) < Θ(n log n) < Θ(n²) < Θ(n³) < Θ(2ⁿ) <br> 
-`참고` 
-> • Θ(2ⁿ): 컴퓨터가 다루기 어려운 수준<br>
+
+> `참고` <br>
+• Θ(2ⁿ): 컴퓨터가 다루기 어려운 수준<br>
 • 일반적으로 **왼쪽으로 갈수록 더 효율적인 알고리즘**
 
 
@@ -69,7 +68,7 @@ sidebar:
 • Big-O 표기법 (O)<br>
 • Omega 표기법 (Ω)<br>
 • Theta 표기법 (Θ)<br>
-소문자 o 표기법 (little-o)
+• 소문자 o 표기법 (little-o)
 
 
 ## Big-O 표기법 (O)
@@ -87,8 +86,8 @@ sidebar:
 
 **[ 예제들 ]**
 > $g(n) = n^2 + 10n$은 $O(n^2)$<br>
-• 왜냐하면 \( n \geq 1 \)일 때 \( n^2 + 10n \leq 11n^2 \)<br>
-• ⇒ \( c = 11, N = 1 \)
+• 왜냐하면 $n \geq 1$일 때 $n^2 + 10n \leq 11n^2$<br>
+• ⇒ $c = 11, N = 1$
 
 > $5n^2 \in O(n^2)$<br>
 • $5n^2 \leq 5n^2$, ⇒ $c = 5, N = 0$
@@ -100,7 +99,7 @@ sidebar:
 • 가능함! $n^2 \leq 1 \cdot (n^2 + 10n)$ (단순한 함수만 오는 게 아니라 복합 함수도 가능)
 
 📈 시각적 설명:  
-초기에는 \( g(n) \)이 \( c \cdot f(n) \)보다 클 수 있지만,  
+초기에는 $g(n)$이 $c \cdot f(n)$보다 클 수 있지만,  
 일정 시점 이후에는 항상 작아지며 계속 그 아래에 머무름
 
 <br>
@@ -108,31 +107,31 @@ sidebar:
 
 ## Omega 표기법 (Ω)
 **[ 정의 ]**
-> 함수 \( g(n) \in \Omega(f(n)) \)란,  
-> 양의 상수 \( c \), 정수 \( N \geq 0 \)가 존재해서  
-> 모든 \( n \geq N \)에 대해  $g(n) \geq c \cdot f(n)$
+> 함수 $g(n) \in \Omega(f(n))$란,  
+> 양의 상수 $c$, 정수 $N \geq 0$가 존재해서  
+> 모든 $n \geq N$에 대해  $g(n) \geq c \cdot f(n)$
 
-📌 즉, \( g(n) \)은 결국 \( c \cdot f(n) \)보다 **빠르지 않다**, 혹은 **그 이상이다**  <br>
+📌 즉, $g(n)$은 결국 $c \cdot f(n)$보다 **빠르지 않다**, 혹은 **그 이상이다**  <br>
 ⇒ **최선의 경우 시간 복잡도** 표현에 사용됨 (하한, lower bound)
 
 <br>
 
 **예제**
 
-> \( n^2 + 10n \in \Omega(n^2) \)
-• \( n^2 + 10n \geq n^2 \), ⇒ \( c = 1, N = 0 \)
+> $n^2 + 10n \in \Omega(n^2)$
+• $n^2 + 10n \geq n^2$, ⇒ $c = 1, N = 0$
 
-> \( 5n^2 \in \Omega(n^2) \)
-• ⇒ \( c = 1, N = 0 \)
+> $5n^2 \in \Omega(n^2)$
+• ⇒ $c = 1, N = 0$
 
 > 교환 정렬  
   $T(n) = \frac{n(n-1)}{2} \geq \frac{1}{4}n^2 \quad \text{(for } n \geq 2 \text{)}$
 
-> \( n^3 \in \Omega(n^2) \)
+> $n^3 \in \Omega(n^2)$
 • 당연히 포함됨 (차수가 더 크므로)
 
 📈 시각적 설명:  
-처음엔 작을 수 있지만, 결국 \( g(n) \)이 \( c \cdot f(n) \)보다 커져서 계속 위에 머물게 됨
+처음엔 작을 수 있지만, 결국 $g(n)$이 $c \cdot f(n)$보다 커져서 계속 위에 머물게 됨
 
 <br>
 <br>
@@ -141,11 +140,11 @@ sidebar:
 
 **정의**
 
-> 함수 $g(n) \in \Theta(f(n))$란,  
+> **함수 $g(n) \in \Theta(f(n))$**란,  
 > 상수 $c_1, c_2 > 0$, 정수 $N \geq 0$가 존재하여  
 > 모든 $n \geq N$에 대해  $c_1 f(n) \leq g(n) \leq c_2 f(n)$
 
-• 즉, $g(n)$이 $f(n)$과 **성장률이 정확히 같은 수준**이라는 뜻
+• 즉, $g(n)$이 $f(n)$과 **성장률이 정확히 같은 수준**이라는 뜻<br>
 • **O와 Ω를 동시에 만족**하면 Θ에 속함  
 $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 
@@ -158,41 +157,39 @@ $\Theta(f(n)) = O(f(n)) \cap \Omega(f(n))$
 > 교환 정렬 알고리즘  
 • $T(n) = \frac{n(n-1)}{2} \in \Theta(n^2)$
 
-> \(4n^2, 6n^2 + 9, 5n^2 + 2n\) 등도 \(\Theta(n^2)\)에 속함
+> $4n^2, 6n^2 + 9, 5n^2 + 2n$ 등도 $\Theta(n^2)$에 속함
 
 <br>
 
 ## 소문자 o 표기법 (little-o)
-**정의**
-> 함수 \(g(n) \in o(f(n))\)란,  
+**[ 정의 ]**
+> 함수 $g(n) \in o(f(n))$란,  
 > **모든** 양의 실수 $c$에 대해 $n \geq N$에서 $g(n) \leq c \cdot f(n)$
 
 • Big-O보다 **더 강한 상한 조건**  
 • 어떤 작은 c라도 만족해야 하므로, **g(n)**은 **f(n)**보다 **훨씬 느린 성장률**을 가져야 함
 
-**예시**
+**[ 예시 ]**
 
 > $n \in o(n^2)$  
 • $n \leq c \cdot n^2$ → 항상 성립 가능  
-• \(c = 0.00001\)일 때 \(N \geq 100000\)
+• $c = 0.00001$일 때 $N \geq 100000$
 
 > $n \notin o(5n)$ 
-• 어떤 c에 대해서도 $n \leq c \cdot 5n\4$ 이 항상 성립할 수 없음 (예: $c = 1/6$)
+• 어떤 c에 대해서도 $n \leq c \cdot 5n$ 이 항상 성립할 수 없음 (예: $c = 1/6$)
 
-- 성질 요약:  
-\[
-g(n) \in o(f(n)) \Rightarrow g(n) \in O(f(n)),\ g(n) \notin \Omega(f(n))
-\]
+> 성질 요약:  
+$g(n) \in o(f(n)) \Rightarrow g(n) \in O(f(n)),\ g(n) \notin \Omega(f(n))$
 
-**예시**
+**[ 예시 ]**
 
-> $g(n) = \begin{cases}n & \text{(짝수일 때)} \\ 1 & \text{(홀수일 때)}\end{cases}$
+> $g(n) = \begin{cases}n & \text{(짝수일 때)} \\1 & \text{(홀수일 때)}\end{cases}$
 
-• 평균적으로 \( O(n) \)에 속함
-• 그러나 일정하게 크지 않기 때문에 \( \Omega(n) \)에 속하지 않음
-• ⇒ \( g(n) \in O(n) - \Omega(n) \), 하지만 \( o(n) \)에도 속하지 않음
+• 평균적으로 $O(n)$에 속함
+• 그러나 일정하게 크지 않기 때문에 $\Omega(n)4에 속하지 않음
+• ⇒ $g(n) \in O(n) - \Omega(n)$, 하지만 $o(n)$에도 속하지 않음
 
-<ㅠ
+<br>
 
 ## 요약 표
 
