--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -1,5 +1,5 @@
 ---
-title: "[알고리즘] 알고리즘의 차수와 복잡도 함수"
+title: "[알고리즘] 분할정복과 탐욕 알고리즘"
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -9,20 +9,40 @@ author_profile: true
 sidebar:
    nav: "docs"
 ---
+<br>
+<br>
 
+# Greedy Algorithm
+## Greedy 알고리즘의 개념
+**[ 개념 - Local Optimization Approach ]**  
+> 자율적인 방법을 가지고 국소적이라고 믿는 값을 선택하는 방법
+> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
+> • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
+
+**[ 예시: Exchanges Greedy Algorithm ]**
+
+```c
+while (there are more coins and the instance is not solved){
+    grab the largest remaining coin;            // selection procedure
+    if (adding the coin makes the change exceed the amount owed)  // feasibility check
+        reject the coin;
+    else
+        add the coin to the change;
+    if (the total value of the change equals the amount owed)     // solution check
+        the instance is solved;
+}
+```
 
 <br>
 <br>
 
-물론입니다! 슬라이드의 전체 내용을 기반으로, **순서는 바꾸되 내용은 그대로 유지하면서** 논리 흐름에 맞게 더 **이해하기 쉬운 방식**으로 재구성해드릴게요.
 
----
 
-# 📘 Divide and Conquer & Binary Search (Recursive)
 
----
 
-## 🔹 1. Divide and Conquer (분할 정복) 소개
+
+# Divide and Conquer 
+## Divide and Conquer (분할 정복) 소개
 
 - **Top-Down 접근 방식**  
   → 문제 인스턴스를 더 작은 인스턴스로 나누고  
@@ -288,6 +308,3 @@ void merge (int h, int m, const keytype U[],
 
 (이미지 생략 – 분할 & 병합 트리)
 
----
-
-원하시면 이 내용을 기반으로 시간 복잡도, 공간 복잡도 또는 Python 코드 변환도 도와드릴 수 있어요!
