--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -1,5 +1,6 @@
 ---
-title: "[알고리즘] 알고리즘의 차수와 복잡도 함수"
+title: "[알고리즘] 최소신장트리와 알고리즘"
+excerpt: "크루스칼 알고리즘, "
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -15,43 +16,17 @@ sidebar:
 <br>
 
 
-
-# Greedy Algorithm
-## Greedy 알고리즘의 개념
-> 자율적인 방법을 가지고 국소적이라고 믿는 값을 선택하는 방법
-
-**Local Optimization Approach**  
-> • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
-> • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
-
-**Exchanges Greedy Algorithm**
-
-```c
-while (there are more coins and the instance is not solved){
-    grab the largest remaining coin;            // selection procedure
-    if (adding the coin makes the change exceed the amount owed)  // feasibility check
-        reject the coin;
-    else
-        add the coin to the change;
-    if (the total value of the change equals the amount owed)     // solution check
-        the instance is solved;
-}
-```
-
-<br>
-<br>
-
 # Minimum Spanning Tree(최소 신장 트리)
 ## Undirected Graph
 **[ 정의 ]**
-> 무방향 그래프 $G$는 유한한 정점 집합 $V$와, 그 정점 쌍들로 구성된 간선 집합 $E$로 구성
-이러한 쌍들은 $G$의 간선이라고 부르며, 우리는 $G$를 다음과 같이 표기함: $G = (V, E)$
+> 무방향 그래프 $G$는 유한한 정점 집합 $V(vertex)$와, 그 정점 쌍들로 구성된 간선 집합 $E(edge)$로 구성<br>
+• 간선: 이러한 쌍들은 $G$의 간선이라고 부름<br> 
+• 표기: $G = (V, E)$
 
 **[ 예시 ]**
-
-  - \( |E| = 7 \), \( |V| = 5 \)
-  - 직접적으로 연결된 노드(이웃)
-  - 그래프에 순환은 있지만 트리는 아님
+• $|E| = 7$, $|V| = 5$
+• 직접적으로 연결된 노드: 이웃
+• 그래프에는 순환은 있지만 트리는 아님
 
 
 ## Tree Structure
@@ -85,4 +60,134 @@ while (the instance is not solved){
         the instance is solved;
 }
 ```
+
+
+<br>
+<br>
+<br>
+
+
+
+# Kruskal Algorithm (크루스칼 알고리즘)
+## Kruskal 알고리즘이란?
+**[ 정의 ]**
+> **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**
+> • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성
+> • Prim 알고리즘과 달리 **간선 중심(edge-based)** 알고리즘
+
+**[ 기본 아이디어 ]**  
+• 가중치가 가장 작은 간선부터 하나씩 선택하면서,  
+• **사이클이 생기지 않도록** 주의하며  
+• $(|V| - 1)$개의 간선을 선택하면 완료
+
+**[ 핵심 도구 ]**
+• **Greedy 방식**으로 간선 선택  
+• **Union-Find (Disjoint Set)** 자료구조로 사이클 판단
+
+<br>
+
+## 동작 예시 (How it works)
+
+1. **초기 그래프 주어짐**
+
+2. **간선들을 가중치 기준으로 정렬**  
+   ```
+   sort → (v2,v3), (v1,v2), (v3,v5), (v2,v5), (v1,v4), (v3,v4)
+   ```
+
+3. **서로소 집합 초기화**  
+   - 정점 수 \( N \)
+   - 간선 수 \( |E| \) = 1부터 시작 → \( |E| = N - 1 \)이 될 때까지
+
+4. **각 단계에서**  
+   - 최소 가중치 간선 선택  
+   - 사이클 없으면 추가  
+   - 사이클 생기면 무시  
+   - 이 과정을 반복
+
+5. **모든 정점이 연결된 하나의 집합이 되면 완료**
+
+📌 아래 요약:
+- 서로소 집합: \( V = \{V_1, V_2, ..., V_5\} \)  
+- 예: \( \{v1\}, \{v2\}, ... \) → \( \{v1, v2\} \)로 병합됨
+
+---
+
+
+
+## 알고리즘 개요 (Overview)
+
+```c
+F = ∅;                             // 간선 집합 초기화
+
+create disjoint subsets of V,      // 각 정점마다 하나씩 분리된 집합 생성
+one for each vertex and 
+containing only that vertex;
+
+sort the edges in E in nondecreasing order;  // 간선을 오름차순으로 정렬
+
+while (the instance is not solved){          // 해결되지 않았다면 반복
+    select next edge;                        // 간선 선택 (선택 절차)
+    
+    if (the edge connects two vertices in disjoint subsets){  // 적합성 검사
+        merge the subsets;
+        add the edge to F;                   // 간선을 추가
+    }
+
+    if (all the subsets are merged)         // 모든 정점이 하나의 집합이면
+        the instance is solved;             // 해결 완료
+}
+
+//또는 “간선의 수 \( |F| = |V| - 1 \)”이 되면 종료해도 됨
+```
+
+
+## Kruskal 알고리즘 코드 (의사코드)
+
+```cpp
+void kruskal(int n, int m,
+             set_of_edges E,
+             set_of_edges& F)
+{
+    index i, j;
+    set_pointer p, q;
+    edge e;
+
+    Sort the m edges in E by weight in nondecreasing order;
+    F = ∅;
+    initial(n);                     // n개의 분리된 집합 초기화
+
+    while (number of edges in F is less than n - 1){
+        e = edge with least weight not yet considered;
+        i, j = indices of vertices connected by e;
+        p = find(i);
+        q = find(j);
+
+        if (!equal(p, q)){
+            merge(p, q);           // 집합 병합
+            add e to F;
+        }
+    }
+}
+```
+
+🧠 연산:
+- 정렬: \( m \log m \)  
+- Union-Find 연산: \( \log n \)  
+- 따라서 전체 시간복잡도:  
+  \[
+  \Theta(m \log m + n)
+  \]
+
+---
+
+### 🟩 4. 시간복잡도 분석 (Analysis)
+
+- 간선 정렬이 Kruskal의 핵심 시간 소모 요소  
+  \[
+  W(m) \in \Theta(m \log m)
+  \]
+
+- 여기서 \( m \)은 간선 수, \( n \)은 정점 수  
+- 크루스칼 알고리즘은 **가중치 기준 정렬 + 유니온 파인드**가 핵심
 
