--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -15,7 +15,7 @@ sidebar:
 # Greedy Algorithm
 ## Greedy 알고리즘의 개념
 **[ 개념 - Local Optimization Approach ]**  
-> 자율적인 방법을 가지고 국소적이라고 믿는 값을 선택하는 방법
+> 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법
 > • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  
 > • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
 
@@ -32,6 +32,10 @@ while (there are more coins and the instance is not solved){
         the instance is solved;
 }
 ```
+
+|최적의 방법|최적이 아닌 방법|
+|---|---|
+|||
 
 <br>
 <br>
