--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -19,30 +19,35 @@ sidebar:
 # Minimum Spanning Tree(최소 신장 트리)
 ## Undirected Graph
 **[ 정의 ]**
-> 무방향 그래프 $G$는 유한한 정점 집합 $V(vertex)$와, 그 정점 쌍들로 구성된 간선 집합 $E(edge)$로 구성<br>
-• 간선: 이러한 쌍들은 $G$의 간선이라고 부름<br> 
+> 무방향 그래프 $G$는 유한한 정점 집합 $V(vertex)$과, 간선 집합 $E(edge)$로 구성<br>
+• 정점: $G$의 정점이라 불림
+• 간선: 정점들의 쌍들로 구성된 집합, $G$의 간선이라고 부름<br> 
 • 표기: $G = (V, E)$
 
 **[ 예시 ]**
+![graph1](https://github.com/GangJiyeon/blog_img/blob/main/posting/al/graph_1.png)
 • $|E| = 7$, $|V| = 5$
 • 직접적으로 연결된 노드: 이웃
-• 그래프에는 순환은 있지만 트리는 아님
+• 그래프에는 순환은 있어서 트리는 아님
+
+$V = {v_1, V_2, V_3, V_4, V_5}$
+$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$
 
 
 ## Tree Structure
 **[ 정의 ]**
-> • 그래프에서 **순환 구조를 없애고** 연결성을 유지한 서브그래프는 트리가 된다  
+> • 그래프에서 일부 엣지를 제거하여 **순환 구조를 없애고** 연결성을 유지한 서브그래프
 > • 트리는 **모든 정점을 포함하고** 사이클이 없는 연결된 구조  
-> • 메시지 전파, 네트워크 연결 등에서 선호됨  
-> • 비용이 줄어듦
+> • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
 **[ 예시 ]**
-- (c) 스패닝 트리: weight = 15  
-- (d) 최소 스패닝 트리: weight = 10
+![graph2&3](https://github.com/GangJiyeon/blog_img/blob/main/posting/al/graph_2&3.png)
+• (c) 스패닝 트리: weight = 15  
+• (d) 최소 스패닝 트리: weight = 10
 
 
 ## Minimum Spanning Tree
-**[ 정의 ]**
+**[ 스패닝 트리 정의 ]**
 > 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**
 > • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함
 > • 하지만 모든 스패닝 트리가 최소 가중치를 가지는 것은 아님
@@ -50,8 +55,8 @@ sidebar:
 **[ 탐욕적(greedy) 접근 방식 사용 ]**
 
 ```c
-F = ∅
-
+F = ∅               // Initialize set of
+                    // edges to empty
 while (the instance is not solved){
     select an edge according to some locally optimal consideration;   // selection procedure
     if (adding the edge to F does not create a cycle)                 // feasibility check
