--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -1,15 +1,14 @@
 ---
 title: "[자바 객체지향] 클래스와 객체"
-excerpt: "클래스와 객체, 생성자, 오버로딩, "
+excerpt: " 클래스와 객체, 생성자, 오버로딩"
 categories:
-	- language
+  - language
 tags: [자바객체지향, Java]
 toc: true
 author_profile: true 
 sidebar:
-	nav: "docs"
+   nav: "docs"
 ---
-
 
 
 
@@ -439,9 +438,58 @@ OuterClass.InnerClass innerObject = outerObject.new InnerClass();
 ```
 
 ```java
+//(3) Local class – inside a method
+class Outer {
+	int i = 100; // 비-정적 멤버 변수
+	static void classMethod() { // 정적 메쏘드
+		final int el = 200;
+		class LocalInStaticContext { // local
+			int k = i; // compile-time error
+			int m = el; // ok
+	
+	}
+	}
+	// 지역 클래스
+	void foo() {
+		class LocalNonStatic { // a local class
+			int j = i;
+		}
+	}
+}
 
+/*
+javac--
+Outer.class
+Outer$1LocalInStaticContext.class
+Outer$1.LocalNonStatic.class
+*/
 ```
 
 ```java
+//Deep nesting – member classes
 
+class WithDeepNesting {
+	boolean toBe;
+	WithDeepNesting(boolean b) { toBe = b;}
+	class NestedC {
+		boolean theQuestion;
+		class DeeplyNesteD {
+			DeeplyNesteD() { 
+				theQuestion = toBe || !toBe; 
+			}
+		}
+	}
+}
+```
+
+```java
+//(4) Anonymous class – 익명
+interface ActionListener {// 인터페이스
+	public void actionPerformed(ActionEvent e);
+}
+ActionListener aL = new ActionListener() {
+	public void actionPerformed(ActionEvent e) {
+		System.out.println(“Q!”);
+	}
+}
 ```
