--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -25,7 +25,7 @@ sidebar:
 • 표기: $G = (V, E)$
 
 **[ 예시 ]**
-![graph1](https://github.com/GangJiyeon/blog_img/blob/main/posting/al/graph_1.png)
+![graph1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
 • $|E| = 7$, $|V| = 5$
 • 직접적으로 연결된 노드: 이웃
 • 그래프에는 순환은 있어서 트리는 아님
@@ -41,7 +41,7 @@ $E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_
 > • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
 **[ 예시 ]**
-![graph2&3](https://github.com/GangJiyeon/blog_img/blob/main/posting/al/graph_2&3.png)
+![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_2&3.png)
 • (c) 스패닝 트리: weight = 15  
 • (d) 최소 스패닝 트리: weight = 10
 
