--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -15,22 +15,25 @@ sidebar:
 # 클래스와 객체 기본 개념
 ## 클래스, 객체, 객체지향프로그래밍의 정의
 **[ 클래스(Class) ]**
-> 1. 객체(objext)의 `속성, 특성`, `기능/행위`를 정의하는 논리적 구조<br>
-2. 새로운 자료형(data type)의 정의: a complex data type, 참조 자료형
+> (1) 새로운 자료형(data type)의 정의: a complex data type, 참조 자료형<br>
+(2) 객체(objext)의 `속성, 특성`, `기능/행위`를 정의하는 논리적 구조
 
 • 객체지향 프로그래밍의 기반: 객체의 설계도(틀, template, design)<br>
-• 속성을 표현하는 `변수`들과 기능을 표현하는 `메소드`들을 `캡슐화(encapsulation)`함
-• 생성: 객체(object) = 클래스의 인스턴스(instance, 사례)
-• 구성
+• 속성을 표현하는 `변수`들과 기능을 표현하는 `메소드`들을 `캡슐화(encapsulation)`함<br>
+• 구성 
+
 |분류|내용|
 |:---:|---|
-|필드, 멤버 변수|member variables (class var, instance var)<br>static/class-wide<br>• class var: static/class-wide-global, 전역<br>• instance var: Local (객체 안, within an object)|
-|메쏘드, 멤버 함수|methods (= member functions)|
+|필드 = 멤버 변수|member variables (class var, instance var)<br>클래스 내부에 선언되는 데이터 저장 공간<br>static/class-wide<br>• class var: static/class-wide-global, 전역<br>• instance var: Local (객체 안, within an object)|
+|메쏘드 = 멤버 함수|methods (= member functions)<br>클래스 내부의 기능(동작)을 정의|
 
-
+`참고` 멤버변수와 메서드
 
 ü they are either open public or hidden private
 (공개) (비공개)
+
+**[ 인스턴스(instance) ]**
+• 생성: 객체(object) = 클래스의 인스턴스(instance, 사례)
 
 **[ 객체(Object) ]**
 > 특징(속성, variable)과 동작(기능, method)의 조합체<br>
